--- a/content/vrmonitor/translations/vrmonitor_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_swedish.txt
@@ -1650,14 +1650,8 @@
 "[english]PlaylistEditor_Detail_Total_Label"	"Total:"
 "PlaylistEditor_Detail_WaitForNext_Checkbox"	"Vänta på nästa"
 "[english]PlaylistEditor_Detail_WaitForNext_Checkbox"	"Wait for Next"
-"PlaylistEditor_Detail_PrerollPlacecard_Label"	"Preroll placecard:"
-"[english]PlaylistEditor_Detail_PrerollPlacecard_Label"	"Preroll Placecard:"
 "PlaylistEditor_Detail_NothingSet_Text"	"Inget inställt."
 "[english]PlaylistEditor_Detail_NothingSet_Text"	"Nothing set."
-"PlaylistEditor_Detail_PrerollDuration_Label"	"Preroll - Varaktighet:"
-"[english]PlaylistEditor_Detail_PrerollDuration_Label"	"Preroll Duration:"
-"PlaylistEditor_Detail_PostrollDuration_Label"	"Postroll - Varaktighet:"
-"[english]PlaylistEditor_Detail_PostrollDuration_Label"	"Postroll Duration:"
 "PlaylistEditor_Detail_AudioVolume_Label"	"Ljudvolym:"
 "[english]PlaylistEditor_Detail_AudioVolume_Label"	"Audio Volume:"
 "PlaylistEditor_Detail_AudioVolumeInPercent_Label"	" i % "
@@ -1718,10 +1712,6 @@
 "[english]PlaylistEditor_SelectExecutable_FileSelector"	"Select Executable Path"
 "PlaylistEditor_SelectWorkingDirectory_FileSelector"	"Välj arbetskatalog"
 "[english]PlaylistEditor_SelectWorkingDirectory_FileSelector"	"Select Working Directory"
-"PlaylistEditor_SelectPrerollPlacecard_FileSelector"	"Välj preroll placecard"
-"[english]PlaylistEditor_SelectPrerollPlacecard_FileSelector"	"Select Preroll Placecard"
-"PlaylistEditor_SelectImageForPlacecard_FileSelector"	"Välj bild för placecard"
-"[english]PlaylistEditor_SelectImageForPlacecard_FileSelector"	"Select Image for Placecard"
 "PlaylistPlayer_WindowTitle"	"Spellistespelare"
 "[english]PlaylistPlayer_WindowTitle"	"Playlist Player"
 "PlaylistPlayer_WindowTitle_WithName"	"Spellistespelare - %1"
@@ -1791,10 +1781,6 @@
 "[english]PlaylistPlayer_ProcessError_Unknown"	""
 "PlaylistPlayer_StatusOfCurrentDemo_Text"	"Status för aktuellt demo: %1 %2"
 "[english]PlaylistPlayer_StatusOfCurrentDemo_Text"	"Status of current demo: %1 %2"
-"PlaylistPlayer_PrerollState_Text"	"Preroll "
-"[english]PlaylistPlayer_PrerollState_Text"	"Preroll "
-"PlaylistPlayer_PostrollState_Text"	"Postroll "
-"[english]PlaylistPlayer_PostrollState_Text"	"Postroll "
 "PlaylistPlayer_StatusOfCurrentEntryPause_Text"	"%1Status för nuvarande post: Pausad"
 "[english]PlaylistPlayer_StatusOfCurrentEntryPause_Text"	"%1Status of current entry: Pause"
 "PlaylistPlayer_StatusOfCurrentEntryNone_Text"	"Ingen statusinformation för aktuell post."
@@ -1899,7 +1885,7 @@
 "[english]Settings_Advanced_Supersampling_Header"	"Supersampling"
 "Settings_Advanced_Supersampling_RequiresRestart"	"Denna ändring kräver omstart av SteamVR för att ta verkan."
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
-"Explanation_Supersampling"	"Supersampling gör att alla VR-applikationer renderas i en högre eller lägre upplösning än det inkopplade headsetets ursprungsupplösning (1.0 är standardvärdet). OBS: Vissa applikationer kan fungera inkorrekt vid en ändring medan de körs, och kan behöva startas om."
+"Explanation_Supersampling"	"Supersampling gör att alla VR-applikationer renderas i en högre (eller lägre) upplösning än det inkopplade headsetets ursprungsupplösning.\n(1.0 är standardvärdet)"
 "[english]Explanation_Supersampling"	"Supersampling will cause all VR applications to render at higher or lower resolution than the native resolution of the attached headset (1.0 is the default). NOTE: Some applications may not correctly respond to a change while running and may need to be restarted."
 "MenuAction_Workshop_RunTools"	"Skapa/uppdatera en miljö"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
@@ -1907,56 +1893,12 @@
 "[english]MenuAction_Workshop_ViewWiki"	"SteamVR Environments Wiki"
 "Settings_EnableLinuxGPUProfiling"	"Aktivera GPU-profilering"
 "[english]Settings_EnableLinuxGPUProfiling"	"Enable GPU profiling"
-"Settings_Advanced_AllowSupersampleFiltering"	"Aktivera avancerad supersample-filtrering"
-"[english]Settings_Advanced_AllowSupersampleFiltering"	"Enable Advanced Supersample Filtering"
-"Explanation_SupersamplingFiltering"	"Alternativ för supersampling-filtrering:"
-"[english]Explanation_SupersamplingFiltering"	"Supersampling Filtering Options:"
 "MenuAction_ReportABug"	"Rapportera en bugg"
 "[english]MenuAction_ReportABug"	"Report A Bug"
-"MessageBox_Submit"	"Skicka"
-"[english]MessageBox_Submit"	"Submit"
 "BugReporter_Title"	"Rapportera en bugg"
 "[english]BugReporter_Title"	"Report A Bug"
-"BugReporter_Explanation"	"Tack för att du hjälper Valve förbättra SteamVR.\n\nDetta rapportverktyg generar en SteamVR-systemrapport som samlar data om system, miljö, och SteamVR-loggning som kan användas av Valve vid diagnostisering."
-"[english]BugReporter_Explanation"	"Thank you for helping Valve improve SteamVR.\n\nThis bug reporter generates a SteamVR System Report which gathers system, environment, and SteamVR logging for use by Valve for diagnostics."
-"BugReporter_ForPersonalSupport"	"Detta är inte ett supportärende och du kommer inte få ett direkt svar. För att få personanpassad SteamVR-hjälp av supportmedarbetare, besök supportsidan."
-"[english]BugReporter_ForPersonalSupport"	"This is not a support ticket and you will not receive a direct response. To receive personalized SteamVR support from an agent, please visit the support site."
-"BugReporter_SteamVRSupport"	"SteamVR Support"
-"[english]BugReporter_SteamVRSupport"	"SteamVR Support"
-"BugReporter_Subject"	"Ämne:"
-"[english]BugReporter_Subject"	"Subject:"
-"BugReporter_CharactersRemaining"	"%1 tecken återstår"
-"[english]BugReporter_CharactersRemaining"	"%1 Characters Remaining"
-"BugReporter_Description"	"Beskrivning:"
-"[english]BugReporter_Description"	"Description:"
-"BugReporter_ReportType"	"Rapporttyp:"
-"[english]BugReporter_ReportType"	"Report Type:"
 "BugReporter_ReportType_Bug"	"Bugg"
 "[english]BugReporter_ReportType_Bug"	"Bug"
-"BugReporter_ReportType_FeatureRequest"	"Förslag på funktion"
-"[english]BugReporter_ReportType_FeatureRequest"	"Feature Request"
-"BugReporter_ReportType_Feedback"	"Feedback"
-"[english]BugReporter_ReportType_Feedback"	"Feedback"
-"BugReporter_PreviewReport"	"Förhandsvisa rapport"
-"[english]BugReporter_PreviewReport"	"Preview Report"
-"BugReporter_IncludeReportAndLogs"	"Inkludera systemrapport och loggfiler"
-"[english]BugReporter_IncludeReportAndLogs"	"Include System Report And Logs"
-"BugReporter_IncludeCrashDumps"	"Inkludera krasch-dumpfiler"
-"[english]BugReporter_IncludeCrashDumps"	"Include Crash Dumps"
-"BugReporter_SubjectRequired"	"Var god ange ett ämne."
-"[english]BugReporter_SubjectRequired"	"Please supply a subject."
-"BugReporter_DescriptionRequired"	"Var god ange en beskrivning."
-"[english]BugReporter_DescriptionRequired"	"Please supply a description."
-"BugReporter_FailedToCreateZip"	"Misslyckades att skapa ZIP-bilaga."
-"[english]BugReporter_FailedToCreateZip"	"Failed to create ZIP attachment."
-"BugReporter_SteamLoginRequired"	"Du måste vara inloggad till ditt Steam-konto för att rapportera en bugg."
-"[english]BugReporter_SteamLoginRequired"	"You need to be logged in to your Steam account to Report A Bug."
-"BugReporter_SubmissionSuccess"	"Skickat!\n\\Tack så mycket."
-"[english]BugReporter_SubmissionSuccess"	"Submission Successful.\n\nThank You."
-"BugReporter_SubmissionFailure"	"Kunde ej skicka in.\n\nBugginsamlaren kan vara upptagen. Försök skicka in igen.\n\nFel: %1\n"
-"[english]BugReporter_SubmissionFailure"	"Submission Failure.\n\nThe Bug Collector may be busy. Please try submitting again.\n\nError: %1\n"
-"BugReporter_PreviewReportTitle"	"Rapportera en bugg - Förhandsvisa rapport"
-"[english]BugReporter_PreviewReportTitle"	"Report A Bug - Preview Report"
 "BugReporter_ProgressSubmitting"	"Skickar...."
 "[english]BugReporter_ProgressSubmitting"	"Submitting..."
 }
