--- a/content/vrmonitor/translations/vrmonitor_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_thai.txt
@@ -323,7 +323,7 @@
 "[english]Settings_RemoveAllRelevantUSBDevices_Text"	"This will remove all SteamVR USB devices from the system. You need to replug the devices in again, so the system installs drivers.\n\nAre you sure?"
 "Settings_RemoveAllRelevantUSBDevices_FailToStart"	"แอปพลิเคชันตัวช่วยในการลบอุปกรณ์ USB ไม่สามารถเริ่มทำงานได้ \nตรวจสอบให้แน่ใจว่าคุณสามารถเริ่มเปิดแอปพลิเคชันนี้ด้วยสิทธิ์ผู้ดูแลได้\n"
 "[english]Settings_RemoveAllRelevantUSBDevices_FailToStart"	"The helper application to remove the USB devices was not able to start.\nMake sure that you can run this application as admin.\n"
-"Settings_RemoveAllRelevantUSBDevices_Crash"	"แอปพลิเคชันตัวช่วยในการลบอุปกรณ์ USB เกิดการแครช \nกรุณาลองใหม่อีกครั้ง\n"
+"Settings_RemoveAllRelevantUSBDevices_Crash"	"แอปพลิเคชันตัวช่วยในการลบอุปกรณ์ USB แครช \nกรุณาลองใหม่อีกครั้ง\n"
 "[english]Settings_RemoveAllRelevantUSBDevices_Crash"	"The helper application to remove the USB devices crashed.\nPlease try again.\n"
 "Settings_RemoveAllRelevantUSBDevices_Success"	"อุปกรณ์ USB ทั้งหมดที่เกี่ยวข้องถูกลบออกแล้ว คุณอาจต้องรีบูตระบบของคุณ\n"
 "[english]Settings_RemoveAllRelevantUSBDevices_Success"	"All relevant USB devices are removed. You may have to reboot your system.\n"
@@ -1019,7 +1019,7 @@
 "[english]RebootHelper_ServiceStatus"	"Service Status: %1"
 "RebootHelper_ServiceError"	"ข้อผิดพลาดเซอร์วิส: %1"
 "[english]RebootHelper_ServiceError"	"Service Error: %1"
-"RebootHelper_StartingSteamVRShutdown"	"กำลังเริ่มปิดระบบ SteamVR..."
+"RebootHelper_StartingSteamVRShutdown"	"กำลังเริ่มปิดการทำงานของ SteamVR..."
 "[english]RebootHelper_StartingSteamVRShutdown"	"Starting SteamVR Shutdown..."
 "RebootHelper_RebootingVivePre"	"กำลังรีบูต Vive Pre..."
 "[english]RebootHelper_RebootingVivePre"	"Rebooting Vive Pre..."
@@ -1381,7 +1381,7 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText"	"Base Station firmware successfully updated. You may need to power cycle the base station before the firmware registers as updated."
 "DismissableWarning_SomeDisplaysAreMirroring"	"บางหน้าจอกำลังแสดงหน้าจอเสมือน (0x1000)"
 "[english]DismissableWarning_SomeDisplaysAreMirroring"	"Some Displays are mirroring (0x1000)"
-"DismissableWarning_UnknownHardwareDetected"	"ตรวจพบฮาร์ดแวร์ที่ไม่รู้จัก (0x2000)"
+"DismissableWarning_UnknownHardwareDetected"	"ฮาร์ดแวร์ที่ไม่รู้จักถูกตรวจพบ (0x2000)"
 "[english]DismissableWarning_UnknownHardwareDetected"	"Unknown Hardware Detected (0x2000)"
 "DismissableWarning_WindowsAeroDisabled"	"Windows Aero ถูกปิดการใช้งาน (0x4000)"
 "[english]DismissableWarning_WindowsAeroDisabled"	"Windows Aero disabled (0x4000)"
@@ -1437,9 +1437,9 @@
 "[english]KnockKnock_Button"	"Knock Knock"
 "KnockKnock_Notification_Text"	"ก๊อก ก๊อก \nบางคนภายนอก VR ต้องการความสนใจจากคุณ"
 "[english]KnockKnock_Notification_Text"	"Knock Knock\nSomeone outside VR would like your attention."
-"MenuAction_Workshop_UploadItem"	"อัปโหลดพื้นหลังใหม่"
+"MenuAction_Workshop_UploadItem"	"อัปโหลดใหม่"
 "[english]MenuAction_Workshop_UploadItem"	"Upload New Background"
-"MenuAction_Workshop_EditItem"	"ปรับแต่งพื้นหลังที่มีอยู่"
+"MenuAction_Workshop_EditItem"	"แก้ไขสิ่งที่มีอยู่"
 "[english]MenuAction_Workshop_EditItem"	"Modify Existing Background"
 "MenuAction_ModelDirectory_Browse"	"เปิดหาไดเรกทอรีโมเดล"
 "[english]MenuAction_ModelDirectory_Browse"	"Browse Model Directory"
@@ -1787,7 +1787,7 @@
 "[english]Lighthouse_BasestationInternalFault_05_Action"	"Visit htcvive.com/support"
 "Settings_StatusWindowMinimizeToTray_Text"	"เมื่อย่อหน้าต่าง สถานะ SteamVR จะย่อไปยังถาดระบบ"
 "[english]Settings_StatusWindowMinimizeToTray_Text"	"When minimized, SteamVR Status minimizes to the system tray"
-"ShutdownWhileAppRunning_Title"	"ปิดระบบ SteamVR"
+"ShutdownWhileAppRunning_Title"	"ปิด SteamVR"
 "[english]ShutdownWhileAppRunning_Title"	"SteamVR Shutdown"
 "ShutdownWhileAppRunning_Format"	"การปิด SteamVR จะเป็นการปิด '%1' ไปด้วย คุณต้องการจะดำเนินการต่อหรือไม่?"
 "[english]ShutdownWhileAppRunning_Format"	"Shutting down SteamVR will also shut down '%1'. Do you wish to continue?"
@@ -1823,69 +1823,9 @@
 "[english]Settings_Advanced_Supersampling_Header"	"Supersampling"
 "Settings_Advanced_Supersampling_RequiresRestart"	"การเปลี่ยนแปลงนี้จำเป็นต้องรีสตาร์ท SteamVR จึงจะส่งผล"
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
-"MenuAction_Workshop_RunTools"	"สร้างหรือปรับแต่งสภาพแวดล้อม"
+"MenuAction_Workshop_RunTools"	"สร้าง/อัปเดตสภาพแวดล้อม"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
 "MenuAction_Workshop_ViewWiki"	"วิกิสภาพแวดล้อม SteamVR"
 "[english]MenuAction_Workshop_ViewWiki"	"SteamVR Environments Wiki"
-"Settings_Advanced_AllowSupersampleFiltering"	"เปิดการใช้งานการกรองซูเปอร์แซมเพิลขั้นสูง"
-"[english]Settings_Advanced_AllowSupersampleFiltering"	"Enable Advanced Supersample Filtering"
-"MenuAction_ReportABug"	"รายงานจุดบกพร่อง"
-"[english]MenuAction_ReportABug"	"Report A Bug"
-"MessageBox_Submit"	"ส่ง"
-"[english]MessageBox_Submit"	"Submit"
-"BugReporter_Title"	"รายงานจุดบกพร่อง"
-"[english]BugReporter_Title"	"Report A Bug"
-"BugReporter_Explanation"	"ขอบคุณสำหรับการช่วยเหลือ Valve ในการเพิ่มประสิทธิภาพ SteamVR \n\nเครื่องมือรายงานจุดบกพร่องนี้ใช้สร้างรายงานระบบ SteamVR ซึ่งจะรวบรวมข้อมูลระบบ สภาพแวดล้อม และล็อก SteamVR เพื่อใช้สำหรับการตรวจวิเคราะห์โดย Valve"
-"[english]BugReporter_Explanation"	"Thank you for helping Valve improve SteamVR.\n\nThis bug reporter generates a SteamVR System Report which gathers system, environment, and SteamVR logging for use by Valve for diagnostics."
-"BugReporter_ForPersonalSupport"	"นี่ไม่ใช่ตั๋วฝ่ายสนับสนุนและคุณจะไม่ได้รับการตอบกลับโดยตรง ในการรับการสนับสนุน SteamVR แบบส่วนตัวจากเจ้าหน้าที่ กรุณาเยี่ยมชมไซต์ฝ่ายสนับสนุน"
-"[english]BugReporter_ForPersonalSupport"	"This is not a support ticket and you will not receive a direct response. To receive personalized SteamVR support from an agent, please visit the support site."
-"BugReporter_SteamVRSupport"	"ฝ่ายสนับสนุน SteamVR"
-"[english]BugReporter_SteamVRSupport"	"SteamVR Support"
-"BugReporter_Subject"	"หัวข้อ:"
-"[english]BugReporter_Subject"	"Subject:"
-"BugReporter_CharactersRemaining"	"%1 ตัวอักษรคงเหลือ"
-"[english]BugReporter_CharactersRemaining"	"%1 Characters Remaining"
-"BugReporter_Description"	"คำอธิบาย:"
-"[english]BugReporter_Description"	"Description:"
-"BugReporter_ReportType"	"ประเภทรายงาน:"
-"[english]BugReporter_ReportType"	"Report Type:"
-"BugReporter_ReportType_Bug"	"จุดบกพร่อง"
-"[english]BugReporter_ReportType_Bug"	"Bug"
-"BugReporter_ReportType_FeatureRequest"	"ขอเพิ่มคุณสมบัติ"
-"[english]BugReporter_ReportType_FeatureRequest"	"Feature Request"
-"BugReporter_ReportType_Feedback"	"ข้อเสนอแนะ"
-"[english]BugReporter_ReportType_Feedback"	"Feedback"
-"BugReporter_PreviewReport"	"แสดงตัวอย่างรายงาน"
-"[english]BugReporter_PreviewReport"	"Preview Report"
-"BugReporter_IncludeReportAndLogs"	"รวมถึงรายงานระบบและล็อก"
-"[english]BugReporter_IncludeReportAndLogs"	"Include System Report And Logs"
-"BugReporter_IncludeCrashDumps"	"รวมถึงแครชดัมพ์"
-"[english]BugReporter_IncludeCrashDumps"	"Include Crash Dumps"
-"BugReporter_SubjectRequired"	"กรุณาระบุหัวข้อ"
-"[english]BugReporter_SubjectRequired"	"Please supply a subject."
-"BugReporter_DescriptionRequired"	"กรุณาระบุคำอธิบาย"
-"[english]BugReporter_DescriptionRequired"	"Please supply a description."
-"BugReporter_FailedToCreateZip"	"ล้มเหลวในการสร้างไฟล์แนบ ZIP"
-"[english]BugReporter_FailedToCreateZip"	"Failed to create ZIP attachment."
-"BugReporter_SteamLoginRequired"	"คุณจำเป็นต้องเข้าสู่ระบบไปยังบัญชี Steam ของคุณ เพื่อรายงานจุดบกพร่อง"
-"[english]BugReporter_SteamLoginRequired"	"You need to be logged in to your Steam account to Report A Bug."
-"BugReporter_SubmissionSuccess"	"การส่งสำเร็จแล้ว\n\nขอบคุณ"
-"[english]BugReporter_SubmissionSuccess"	"Submission Successful.\n\nThank You."
-"BugReporter_SubmissionFailure"	"การส่งล้มเหลว\n\nเครื่องมือรวบรวมจุดบกพร่องอาจกำลังทำงานหนักอยู่ กรุณาลองส่งใหม่อีกครั้ง\n\nข้อผิดพลาด: %1\n"
-"[english]BugReporter_SubmissionFailure"	"Submission Failure.\n\nThe Bug Collector may be busy. Please try submitting again.\n\nError: %1\n"
-"BugReporter_PreviewReportTitle"	"รายงานจุดบกพร่อง - แสดงตัวอย่างรายงาน"
-"[english]BugReporter_PreviewReportTitle"	"Report A Bug - Preview Report"
-"BugReporter_ProgressSubmitting"	"กำลังส่ง..."
-"[english]BugReporter_ProgressSubmitting"	"Submitting..."
-"BugReporter_SubmissionTimeout"	"เกินเวลาในการส่ง \n\nการอัปโหลดผ่านเครือข่ายใช้เวลานานกว่าที่คาดไว้ กรุณาลองใหม่ภายหลัง \n"
-"[english]BugReporter_SubmissionTimeout"	"Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
-"Settings_HomeAppCheck"	"หน้าหลัก SteamVR เบต้า"
-"[english]Settings_HomeAppCheck"	"SteamVR Home Beta"
-"Settings_HomeAppDesc"	"ประสบการณ์หน้าหลัก SteamVR แบบใหม่รองรับพื้นที่บ้านที่ดียิ่งขึ้น คุณสมบัติทางสังคม และอีกมากมาย คุณสมบัตินี้อยู่ในช่วงเบต้า กรุณาให้ข้อเสนอแนะในฟอรัม"
-"[english]Settings_HomeAppDesc"	"The new SteamVR Home experience supports richer home spaces, social features, and more. This feature is currently in Beta, please provide feedback on the forums."
-"Settings_NightModeCheck"	"โหมดกลางคืน"
-"[english]Settings_NightModeCheck"	"Night Mode"
-"Settings_NightModeDesc"	"โหมดกลางคืนลดแสงเครื่องสวมศีรษะจนถึง 5:00 AM (หรือจนรีสตาร์ท SteamVR)"
-"[english]Settings_NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 }
 }
