--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_brazilian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_brazilian.txt
@@ -2029,6 +2029,8 @@
 "[english]TutorialSocial_Tile2_Desc"	"You can set your personal bubble in Settings to fade out players and held props at a set distance."
 "TutorialSocial_Tile3_Desc"	"Também é possível selecionar o nome de um jogador para ver os seus detalhes, silenciar ou adicioná-lo aos seus amigos."
 "[english]TutorialSocial_Tile3_Desc"	"You can also select a player's nametag to see their details, mute or add them as a friend."
+"TutorialSocial_Bottom_Desc"	"O anfitrião da sala pode expulsar jogadores por meio do painel de detalhes."
+"[english]TutorialSocial_Bottom_Desc"	"Room hosts have the ability to kick players from their room in the Room Detail panel."
 "TutorialMultiTool_Title"	"Usando a multiferramenta"
 "[english]TutorialMultiTool_Title"	"Using the Multi-Tool"
 "TutorialMultiTool_Tile1_Desc"	"A multiferramenta permite congelar, descongelar, clonar e excluir objetos em ambientes do SteamVR."
@@ -2055,6 +2057,8 @@
 "[english]TutorialHome_Tile1_Desc"	"Your Home environment is where you start out in when you launch SteamVR."
 "TutorialHome_Tile2_Desc"	"Para definir o seu ponto inicial, vá ao painel de detalhes do ambiente e selecione \"Definir como ponto inicial\"."
 "[english]TutorialHome_Tile2_Desc"	"To set your Home, go to the environment's detail panel and select the 'Set As Home' button."
+"TutorialHome_Tile3_Desc"	"Você também voltará a este ambiente ao selecionar \"Início\" no painel."
+"[english]TutorialHome_Tile3_Desc"	"You will also be taken to this environment when you select 'Go Home' from the Dashboard."
 "TutorialHome_Bottom_Desc"	"Não se esqueça — é possível personalizar e salvar um ambiente para definir como ponto inicial."
 "[english]TutorialHome_Bottom_Desc"	"Don't forget - you can customize and save an environment to set as your Home."
 "VR_Avatar_Wearable_SailorHat001"	"Chapéu de marinheiro"
@@ -2501,6 +2505,22 @@
 "[english]BrowseWorkshop_Visit"	"Visit"
 "BackgroundsFirstTimeText"	"Aqui na sessão de Fundos você encontrará diferentes fundos para personalizar o seu ambiente. \n\nPara começar a explorar, selecione a aba \"Obter mais\" acima. Lá, você poderá navegar e baixar novos fundos da Oficina do SteamVR.\n\nObservação: nem todos os ambientes podem ter fundos personalizados."
 "[english]BackgroundsFirstTimeText"	"Here in the Backgrounds section, you'll find different backgrounds to customize your environment. \n\nTo start exploring, select the 'Get More' tab above. There you'll be able to browse and download new backgrounds from the SteamVR Workshop.\n\nNote: Not every environment is compatible with customizable backgrounds."
+"VR_Avatar_keemo_head"	"Keemo"
+"[english]VR_Avatar_keemo_head"	"Keemo"
+"VR_Avatar_keemo_head_Desc"	"Keemo, do ambiente Retiro de Ilia."
+"[english]VR_Avatar_keemo_head_Desc"	"Keemo from Seadocks."
+"VR_Avatar_keli_head"	"Keli"
+"[english]VR_Avatar_keli_head"	"Keli"
+"VR_Avatar_keli_head_Desc"	"Keli, do ambiente Retiro de Ilia."
+"[english]VR_Avatar_keli_head_Desc"	"Keli from Seadocks."
+"VR_Avatar_mochi_head"	"Mochi"
+"[english]VR_Avatar_mochi_head"	"Mochi"
+"VR_Avatar_mochi_head_Desc"	"Mochi, do ambiente Retiro de Ilia."
+"[english]VR_Avatar_mochi_head_Desc"	"Mochi from Seadocks"
+"VR_Avatar_teemo_head"	"Teemo"
+"[english]VR_Avatar_teemo_head"	"Teemo"
+"VR_Avatar_teemo_head_Desc"	"Teemo, do ambiente Retiro de Ilia."
+"[english]VR_Avatar_teemo_head_Desc"	"Teemo from seadocks."
 "EmptyBackgroundItem_Name"	"[ Sem fundo ]"
 "[english]EmptyBackgroundItem_Name"	"[ No Background ]"
 "EmptyBackgroundItem_Desc"	"Usar o fundo original do mapa."
@@ -2591,5 +2611,13 @@
 "[english]VivePromoTitle"	"Vive Items"
 "VivePromoDesc"	"Usuários do Vive têm acesso a um avatar do headset do Vive e uma estátua do logo do Vive.\n\nPara acessá-los, abra as seções Avatares e Coisas do menu."
 "[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
+"VR_PhysicsProp_JSCoffeeMug"	"Caneca I <3 Job"
+"[english]VR_PhysicsProp_JSCoffeeMug"	"I <3 Job Mug"
+"VR_PhysicsProp_JSCoffeeMug_Desc"	"Embora os humanos tivessem a tradição de usar vasos cilíndricos de cerâmica para ingerir líquidos cafeinados, esses itens também já foram usados por trabalhadores infelizes como projéteis lançados contra os seus colegas e superiores.\n\nDestravada por possuir Job Simulator."
+"[english]VR_PhysicsProp_JSCoffeeMug_Desc"	"Although humans traditionally utilized cylindrical ceramic vessels for ingesting caffeinated liquids, these items also acted as projectiles for disgruntled workers to toss at their coworkers and superiors.\n\nUnlocked by owning Job Simulator."
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Caveira Séria"
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Serious Skull"
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Impressione os seus amigos e assuste os seus inimigos com esta caveira Kleer de alta qualidade, colhida a partir de hordas orgânicas de Kleer pelas suaves mãos de Sam Stone. Para quem leva o meio-ambiente a SÉRIO.\n\nDestravada por possuir Serious Sam VR: The Last Hope."
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Impress your friends and frighten your enemies with this high-quality Kleer skull, organically sourced from the Kleer horde by the tender hands of Sam Stone. Because you are SERIOUS about the environment.\n\nUnlocked by owning Serious Sam VR: The Last Hope."
 }
 }
