--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_czech.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_czech.txt
@@ -1955,7 +1955,7 @@
 "[english]VR_PropTool_FreezeTool_Desc"	"Use this tool to freeze objects in place, thaw objects that are frozen, clone objects or delete them from the world."
 "VR_PhysicsProp_TidehunterToy001"	"Tidehunter"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
-"VR_PhysicsProp_TidehunterToy001_Desc"	"Hračka Tidehuntera ze hry Dota 2."
+"VR_PhysicsProp_TidehunterToy001_Desc"	"Hračka Tidehuntera ze hry Dota 2.\n\nDárek ze hry Dota 2."
 "[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"MALÁ"
 "[english]SmallBubble"	"SMALL"
@@ -2238,9 +2238,9 @@
 "[english]SetHome_Button"	"Set As Home"
 "IsHome_Button"	"Stávající domov"
 "[english]IsHome_Button"	"Current Home"
-"PromotedItemTitle"	"Prostředí HTC Vive"
+"PromotedItemTitle"	"Prostředí Vive"
 "[english]PromotedItemTitle"	"Vive Environment"
-"PromotedItemDescription"	"Navštivte domovské prostředí vytvořené společností HTC pro uživatele headsetu Vive. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"PromotedItemDescription"	"Navštivte domovské prostředí vytvořené společností HTC pro uživatele headsetu Vive."
 "[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Nyní ne"
 "[english]DismissLabel"	"Not Now"
@@ -2342,7 +2342,7 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"PŘEDMĚTY HTC VIVE"
+"HTCPromoTitle"	"PŘEDMĚTY VIVE"
 "[english]HTCPromoTitle"	"VIVE ITEMS"
 "HTCPromoDesc"	"Exkluzivní avatar a objekt pro vlastníky headsetu HTC Vive."
 "[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
@@ -2596,7 +2596,7 @@
 "[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
 "VR_PropTool_meeseeks_ball_Desc"	"AHÓJ, JÁ JSEM PAN MEESEEKS! PODÍVEJTE SE NA MĚ!\n\nDárek za vlastnění hry Rick and Morty: Virtual Rick-ality."
 "[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
-"VR_PhysicsProp_ViveLogoStatue"	"Skulptura HTC Vive"
+"VR_PhysicsProp_ViveLogoStatue"	"Skulptura Vive"
 "[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
 "VR_PhysicsProp_ViveLogoStatue_Desc"	"Klasická abstraktní skulptura reprezentující rozpor mezi postmodernismem a... tak počkat, vždyť je to logo zařízení Vive!\n\nDostupné uživatelům headsetu HTC Vive."
 "[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
@@ -2612,9 +2612,17 @@
 "[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
 "VR_Avatar_MptamHmd_Desc"	"Pro zjišťování polohy nositele byly využívány kódy na zdech, zatímco samotné displeje headsetu tvořily dva mobilní telefony propojené vlastnoručně vyrobenými obvody."
 "[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
-"VivePromoTitle"	"Předměty HTC Vive"
+"VivePromoTitle"	"Předměty Vive"
 "[english]VivePromoTitle"	"Vive Items"
 "VivePromoDesc"	"Uživatelé headsetu Vive mohou nově využít exkluzivního avatara a skulpturu.\n\nPředměty lze nalézt v sekcích „Avatary“ a „Objekty“."
 "[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
+"VR_PhysicsProp_JSCoffeeMug"	"Hrnek „<3 svoji práci“"
+"[english]VR_PhysicsProp_JSCoffeeMug"	"I <3 Job Mug"
+"VR_PhysicsProp_JSCoffeeMug_Desc"	"Ačkoli lidé válcovité keramické nádoby používali převážně pro uchovávání tekutin obsahujících kofein, také mohli sloužit jako improvizované projektily při útocích na spolupracovníky či nadřízené.\n\nDárek za vlastnění hry Job Simulator."
+"[english]VR_PhysicsProp_JSCoffeeMug_Desc"	"Although humans traditionally utilized cylindrical ceramic vessels for ingesting caffeinated liquids, these items also acted as projectiles for disgruntled workers to toss at their coworkers and superiors.\n\nUnlocked by owning Job Simulator."
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Kleerova lebka"
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Serious Skull"
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Ohromte své přátele a zastrašte své nepřátele touto vysoce kvalitní lebkou Kleera, kterou ekologicky nezávadným způsobem získal Sam Stone z hordy Kleerů.\n\nDárek za vlastnění hry Serious Sam VR: The Last Hope."
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Impress your friends and frighten your enemies with this high-quality Kleer skull, organically sourced from the Kleer horde by the tender hands of Sam Stone. Because you are SERIOUS about the environment.\n\nUnlocked by owning Serious Sam VR: The Last Hope."
 }
 }
