--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_finnish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_finnish.txt
@@ -1953,7 +1953,7 @@
 "[english]VR_PropTool_FreezeTool_Desc"	"Use this tool to freeze objects in place, thaw objects that are frozen, clone objects or delete them from the world."
 "VR_PhysicsProp_TidehunterToy001"	"Tidehunter-lelu"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
-"VR_PhysicsProp_TidehunterToy001_Desc"	"Dota 2:n Tidehunter-lelu."
+"VR_PhysicsProp_TidehunterToy001_Desc"	"Dota 2:n Tidehunter-lelu.\\rSaadaan pelaamalla Dota 2 -peliä."
 "[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"PIENI"
 "[english]SmallBubble"	"SMALL"
@@ -2235,7 +2235,7 @@
 "[english]SetHome_Button"	"Set As Home"
 "IsHome_Button"	"Koti tällä hetkellä"
 "[english]IsHome_Button"	"Current Home"
-"PromotedItemTitle"	"HTC Vive -ympäristö"
+"PromotedItemTitle"	"Vive-ympäristö"
 "[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Vieraile HTC:n luomassa Viven käyttäjille tarkoitetussa kotiympäristössä."
 "[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
@@ -2339,11 +2339,11 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"VIVE-YMPÄRISTÖ"
+"HTCPromoTitle"	"VIVE-ESINEET"
 "[english]HTCPromoTitle"	"VIVE ITEMS"
-"HTCPromoDesc"	"HTC:ltä Viven omistajille."
+"HTCPromoDesc"	"Muista käydä katsomassa Viven omistajien Vive-avatar ja esine."
 "[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
-"ValvePromoTitle"	"VALVE-YMPÄRISTÖJEN KOKOELMA"
+"ValvePromoTitle"	"VALVE-YMPÄRISTÖT"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Klikkaa tästä nähdäksesi Valven taiteilijoiden tekemät SteamVR-ympäristöt."
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
@@ -2559,47 +2559,47 @@
 "[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
 "VR_PhysicsProp_AudioshieldShield001"	"Äänikilpi"
 "[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
-"VR_PhysicsProp_AudioshieldShield001_Desc"	"Varustaudu musiikilliseen pommitukseen.\n\nKuten Audioshield-pelissä."
+"VR_PhysicsProp_AudioshieldShield001_Desc"	"Varustaudu musiikilliseen pommitukseen.\n\nSaadaan omistamalla Audioshield."
 "[english]VR_PhysicsProp_AudioshieldShield001_Desc"	"Equip in case of musical bombardment.\n\nUnlocked by owning Audioshield."
 "VR_PhysicsProp_NekoPlushie"	"Neko-lelu"
 "[english]VR_PhysicsProp_NekoPlushie"	"Neko Toy"
-"VR_PhysicsProp_NekoPlushie_Desc"	"Miau miau miau miau.\n\nPelistä Fantastic Contraption."
+"VR_PhysicsProp_NekoPlushie_Desc"	"Miau miau miau miau.\n\nSaadaan omistamalla Fantastic Contraption."
 "[english]VR_PhysicsProp_NekoPlushie_Desc"	"Meow meow meow meow.\n\nUnlocked by owning Fantastic Contraption."
 "VR_PhysicsProp_GauntletTrophy"	"Hansikas"
 "[english]VR_PhysicsProp_GauntletTrophy"	"The Gauntlet"
-"VR_PhysicsProp_GauntletTrophy_Desc"	"Pyhät pyssyt Al, kone nappasi meidät molemmat! Ainakin saimme tämän tyylikkään avaruuskäden matkamuistoksi!\n\nPelistä Call of the Starseed."
+"VR_PhysicsProp_GauntletTrophy_Desc"	"Pyhät pyssyt Al, kone nappasi meidät molemmat! Ainakin saimme tämän tyylikkään avaruuskäden matkamuistoksi!\n\nSaadaan omistamalla The Gallery - Call of the Starseed."
 "[english]VR_PhysicsProp_GauntletTrophy_Desc"	"Holy smokes, Al, the machine got us both! At least we have this radical souvenir space hand!\n\nUnlocked by owning The Gallery - Call of the Starseed."
 "VR_PhysicsProp_ASAmmoBox"	"Ammuslaatikko"
 "[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
-"VR_PhysicsProp_ASAmmoBox_Desc"	"Ammuslaatikko! Ihana, ihana ammuslaatikko! \n\nPelistä Arizona Sunshine."
+"VR_PhysicsProp_ASAmmoBox_Desc"	"Ammuslaatikko! Ihana, ihana ammuslaatikko! \n\nSaadaan omistamalla Arizona Sunshine."
 "[english]VR_PhysicsProp_ASAmmoBox_Desc"	"Ammo Box, Yeah baby! Sweet, sweet ammo! \n\nUnlocked by owning Arizona Sunshine."
 "VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
 "[english]VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
-"VR_PhysicsProp_AirmechStrikerToy_Desc"	"Toisen sukupolven Striker-luokan AirMech. Tämä pienoismalli annettiin valtion virastoille lahjaksi suurtilauksista.\n\nPelistä AirMech."
+"VR_PhysicsProp_AirmechStrikerToy_Desc"	"Toisen sukupolven Striker-luokan AirMech. Tämä pienoismalli annettiin valtion virastoille lahjaksi suurtilauksista.\n\nSaadaan omistamalla AirMech Command."
 "[english]VR_PhysicsProp_AirmechStrikerToy_Desc"	"Second generation Striker class AirMech. This scale model was gifted to government agencies who placed very large orders.\n\nUnlocked by owning AirMech Command."
 "VR_PhysicsProp_HJGuntherToy"	"Gunther"
 "[english]VR_PhysicsProp_HJGuntherToy"	"Gunther"
-"VR_PhysicsProp_HJGuntherToy_Desc"	"Ravintolabisnes laajenee Gunther-tuotteiksi. Hanki oma Gunther-figuurisi tänään!\n\nPelistä Hover Junkers."
+"VR_PhysicsProp_HJGuntherToy_Desc"	"Ravintolabisnes laajenee Gunther-tuotteiksi. Hanki oma Gunther-figuurisi tänään!\n\nSaadaan omistamalla Hover Junkers."
 "[english]VR_PhysicsProp_HJGuntherToy_Desc"	"Branching out from his diner business, Gunther has entered the world of merchandising. Own your very own Gunther figure today!\n\nUnlocked by owning Hover Junkers."
 "VR_Avatar_SpacePirateHelmet"	"Avaruusmerirosvon kypärä"
 "[english]VR_Avatar_SpacePirateHelmet"	"Space Pirate Helmet"
-"VR_Avatar_SpacePirateHelmet_Desc"	"Neurostimulattoreilla tehostettu näkö, äänet ja kyky hidastaa aikaa. Tämä kypärä on täydellinen kaikille avaruusmerirosvoille, myös harjoittelijoille."
+"VR_Avatar_SpacePirateHelmet_Desc"	"Neurostimulattoreilla tehostettu näkö, äänet ja kyky hidastaa aikaa. Tämä kypärä on täydellinen kaikille avaruusmerirosvoille, myös harjoittelijoille.\n\nSaadaan omistamalla Space Pirate Trainer."
 "[english]VR_Avatar_SpacePirateHelmet_Desc"	"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by owning Space Pirate Trainer."
 "VR_PhysicsProp_MiniAtlas"	"Atlaksen pienoismalli"
 "[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
-"VR_PhysicsProp_MiniAtlas_Desc"	"Silloin kun tämä Aperture laboratorioiden upea robotti ei joudu nöyryytetyksi GLaDOSin onnettomia testaajien korjauksien kanssa, joutuu se häpeämään oloaan koriste-esineenä.\n\nAvattu pelaamalla peliä The Lab."
+"VR_PhysicsProp_MiniAtlas_Desc"	"Silloin kun tämä Aperture laboratorioiden upea robotti ei joudu nöyryytetyksi GLaDOSin onnettomia testaajien korjauksien kanssa, joutuu se häpeämään oloaan koriste-esineenä.\n\nSaadaan pelaamalla The Labia."
 "[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories can now suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
 "VR_PropTool_meeseeks_ball"	"Mr. Meeseeks -pallo"
 "[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
 "VR_PropTool_meeseeks_ball_Desc"	"HEI! OLEN MR MEESEEKS! KATSOKAA MINUA!\n\nAvattu omistamalla peli Rick and Morty: Virtual Rickality"
 "[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
-"VR_PhysicsProp_ViveLogoStatue"	"HTC Vive -veistos"
+"VR_PhysicsProp_ViveLogoStatue"	"Vive-veistos"
 "[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
-"VR_PhysicsProp_ViveLogoStatue_Desc"	"Klassinen abstraktio jossa post-modernien todellisuuksien kahtiajako ja ... hei, sehän on veistos Viven logosta!\n\nHTC Viven käyttäjille."
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Klassinen abstraktio jossa post-modernien todellisuuksien kahtiajako ja ... hei, sehän on veistos Viven logosta!\n\nViven käyttäjille."
 "[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
 "VR_Avatar_ViveHeadset"	"HTC Vive -visiiri"
 "[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
-"VR_Avatar_ViveHeadset_Desc"	"HTC Vive -visiiri Deluxe Audio -hihnoilla.\n\nHTC Viven käyttäjille."
+"VR_Avatar_ViveHeadset_Desc"	"HTC Vive -visiiri Deluxe Audio -hihnoilla.\n\nViven käyttäjille."
 "[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
 "VR_Avatar_OnwardHead"	"MARSOC-kypärä"
 "[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
@@ -2609,9 +2609,17 @@
 "[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
 "VR_Avatar_MptamHmd_Desc"	"Visiirin kamera tunnistaa koodeja seiniltä käyttäjän asennon tunnistamiseksi. Koekappaleen näyttö rakennettiin liittämällä yhteen kaksi matkapuhelimen näyttöä."
 "[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
-"VivePromoTitle"	"HTC Vive -esineet"
+"VivePromoTitle"	"Vive-esineet"
 "[english]VivePromoTitle"	"Vive Items"
 "VivePromoDesc"	"Viven käyttäjät saavat Vive-visiiri avatarin ja Viven logopatsaan.\n\nLöydät nämä valikon avatarit ja esineet osioista."
 "[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
+"VR_PhysicsProp_JSCoffeeMug"	"Minä <3 työtä -muki"
+"[english]VR_PhysicsProp_JSCoffeeMug"	"I <3 Job Mug"
+"VR_PhysicsProp_JSCoffeeMug_Desc"	"Vaikka ihmiset perinteisesti käyttivät sylinterin muotoisia keraamisia säiliöitä kuljettaakseen nieltäviä kofeiinipitoisia nesteitä, toimivat nämä myös närkästyneiden työntekijöiden heittoaseina. Närkästyksissään he saattoivat singota jotain työkavereiden tai esimiehen päälle. \n\nAnsaitaan omistamalla Job Simulator."
+"[english]VR_PhysicsProp_JSCoffeeMug_Desc"	"Although humans traditionally utilized cylindrical ceramic vessels for ingesting caffeinated liquids, these items also acted as projectiles for disgruntled workers to toss at their coworkers and superiors.\n\nUnlocked by owning Job Simulator."
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Vakava kallo"
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Serious Skull"
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Tee vaikutus kavereihisi ja pelottele vihamiehiäsi tällä korkealaatuisella Kleer-kallolla, joka on luonnonmukaisesti hankittu Sam Stonen hellin kätösin Kleer-laumalta. Koska olet VAKAVASTI ympäristöystävällinen.\n\nAnsaitaan omistamalla Serious Sam VR: The Last Hope."
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Impress your friends and frighten your enemies with this high-quality Kleer skull, organically sourced from the Kleer horde by the tender hands of Sam Stone. Because you are SERIOUS about the environment.\n\nUnlocked by owning Serious Sam VR: The Last Hope."
 }
 }
