--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_german.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_german.txt
@@ -91,7 +91,7 @@
 "[english]PlayerBillboard_Name"	"{s:player_name}"
 "WelcomePanel_Title"	"Willkommen!"
 "[english]WelcomePanel_Title"	"Welcome!"
-"WelcomePanel_PressMenuButton"	"Willkommen bei SteamVR!\n\nDrücken Sie die Menütaste an Ihrem Controller, um zu beginnen."
+"WelcomePanel_PressMenuButton"	"Willkommen!\n\nDrücken Sie die Menütaste Ihres Controllers, um loszulegen."
 "[english]WelcomePanel_PressMenuButton"	"Welcome! \n\nPress the Menu button on your controller to begin."
 "DOTA_Workshop_Publish_WindowTitle"	"Workshop-Veröffentlichung"
 "[english]DOTA_Workshop_Publish_WindowTitle"	"Workshop Publish"
@@ -1907,9 +1907,9 @@
 "[english]VR_Furniture_Stand001"	"TV Stand"
 "VR_Furniture_Stand001_Desc"	"Ein Tisch für Ihre Unterhaltungselektronik."
 "[english]VR_Furniture_Stand001_Desc"	"A stand for your entertainment system."
-"VR_Furniture_HousePlant001"	"Hauspflanze (Bambus)"
+"VR_Furniture_HousePlant001"	"Zimmerpflanze"
 "[english]VR_Furniture_HousePlant001"	"House Plant"
-"VR_Furniture_HousePlant001_Desc"	"Bambus-Zimmerpflanze."
+"VR_Furniture_HousePlant001_Desc"	"Eine Zimmerpflanze."
 "[english]VR_Furniture_HousePlant001_Desc"	"A house plant."
 "Dashboard_Destinations_2"	"UMGEBUNGEN"
 "[english]Dashboard_Destinations_2"	"ENVIRONMENTS"
@@ -1955,7 +1955,7 @@
 "[english]VR_PropTool_FreezeTool_Desc"	"Use this tool to freeze objects in place, thaw objects that are frozen, clone objects or delete them from the world."
 "VR_PhysicsProp_TidehunterToy001"	"Tidehunter-Spielzeug"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
-"VR_PhysicsProp_TidehunterToy001_Desc"	"Tidehunter-Spielzeug aus Dota 2."
+"VR_PhysicsProp_TidehunterToy001_Desc"	"Tidehunter-Spielzeug aus Dota 2.\n\nFreigeschaltet durch das Spielen von Dota 2."
 "[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"KLEIN"
 "[english]SmallBubble"	"SMALL"
@@ -2237,9 +2237,9 @@
 "[english]SetHome_Button"	"Set As Home"
 "IsHome_Button"	"Aktueller Startort"
 "[english]IsHome_Button"	"Current Home"
-"PromotedItemTitle"	"HTC Vive-Umgebung"
+"PromotedItemTitle"	"Vive-Umgebung"
 "[english]PromotedItemTitle"	"Vive Environment"
-"PromotedItemDescription"	"Besuchen Sie die von HTC für Vive-Benutzer erstellte Startumgebung. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"PromotedItemDescription"	"Besuchen Sie die von HTC für Vive-Benutzer erstellte Startumgebung."
 "[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Nicht jetzt"
 "[english]DismissLabel"	"Not Now"
@@ -2341,7 +2341,7 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"VIVE UMGEBUNG"
+"HTCPromoTitle"	"VIVE-GEGENSTÄNDE"
 "[english]HTCPromoTitle"	"VIVE ITEMS"
 "HTCPromoDesc"	"Von HTC für Vive-Benutzer erstellt."
 "[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
@@ -2507,13 +2507,37 @@
 "[english]VR_Map_HawaiiBeach"	"Hawai'i Beach"
 "VR_Map_HawaiiBeach_Desc"	"Ein Strand an der Insel Hawaii."
 "[english]VR_Map_HawaiiBeach_Desc"	"A beach on the Island of Hawai'i."
+"VR_PhysicsProp_AudioshieldShield001"	"Audioschild"
+"[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
+"VR_PhysicsProp_NekoPlushie"	"Neko-Spielzeug"
+"[english]VR_PhysicsProp_NekoPlushie"	"Neko Toy"
+"VR_PhysicsProp_NekoPlushie_Desc"	"Miau miau miau miau.\n\nFreigeschaltet durch den Besitz von Fantastic Contraption."
+"[english]VR_PhysicsProp_NekoPlushie_Desc"	"Meow meow meow meow.\n\nUnlocked by owning Fantastic Contraption."
 "VR_PhysicsProp_ASAmmoBox"	"Munitionskiste"
 "[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
+"VR_PhysicsProp_ASAmmoBox_Desc"	"Munitionskiste, yeah Baby! Süße, süße Munition! \n\nFreigeschaltet durch den Besitz von Arizona Sunshine."
+"[english]VR_PhysicsProp_ASAmmoBox_Desc"	"Ammo Box, Yeah baby! Sweet, sweet ammo! \n\nUnlocked by owning Arizona Sunshine."
+"VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"[english]VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"[english]VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"VR_Avatar_SpacePirateHelmet"	"Weltraumpiratenhelm"
+"[english]VR_Avatar_SpacePirateHelmet"	"Space Pirate Helmet"
+"VR_PhysicsProp_MiniAtlas"	"Miniatur-Atlas"
+"[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
+"VR_PropTool_meeseeks_ball"	"Mr. Meeseeks' Ball"
+"[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
+"VR_PropTool_meeseeks_ball_Desc"	"HALLO! ICH BIN MR. MEESEEKS! SCHAU MICH AN!\n\nFreigeschaltet durch den Besitz von Rick and Morty: Virtual Rickality"
+"[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
 "VR_Avatar_ViveHeadset"	"HTC-Vive-Headset"
 "[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
+"VR_Avatar_ViveHeadset_Desc"	"Das HTC-Vive-Headset mit Deluxe-Audio-Strap.\n\nVerfügbar für HTC-Vive-Benutzer."
+"[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
 "VR_Avatar_OnwardHead"	"MARSOC-Helm"
 "[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
-"VivePromoTitle"	"HTC-Vive-Gegenstände"
+"VR_Avatar_MptamHmd"	"Früher Valve-Prototyp"
+"[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
+"VivePromoTitle"	"Vive-Gegenstände"
 "[english]VivePromoTitle"	"Vive Items"
 }
 }
