--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_greek.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_greek.txt
@@ -851,6 +851,8 @@
 "[english]SaveTitle"	"Save Environment?"
 "SaveButtonOKText"	"Αποθήκευση"
 "[english]SaveButtonOKText"	"Save"
+"VR_PhysicsProp_TidehunterToy001_Desc"	"Το παιχνίδι Tidehunter από το Dota 2.\n\nΞεκλειδώνεται παίζοντας Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"ΜΙΚΡΗ"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"ΜΕΓΑΛΗ"
@@ -985,9 +987,21 @@
 "[english]ItemDetail_SetBackground"	"Set Background"
 "ItemDetail_EquipTool"	"Εξόπλιση"
 "[english]ItemDetail_EquipTool"	"Equip"
+"PromotedItemTitle"	"Περιβάλλον Vive"
+"[english]PromotedItemTitle"	"Vive Environment"
+"PromotedItemDescription"	"Επισκεφθείτε το αρχικό περιβάλλον που έχει δημιουργηθεί από την HTC για χρήστες Vive."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "ItemDetail_Size"	"Μέγεθος λήψης: 355MB"
 "[english]ItemDetail_Size"	"Download Size: 355MB"
 "ItemDetail_HostNewRoom"	"Δημιουργία δωματίου"
 "[english]ItemDetail_HostNewRoom"	"Host a Room"
+"HTCPromoTitle"	"ΑΝΤΙΚΕΙΜΕΝΑ VIVE"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
+"VR_PhysicsProp_ViveLogoStatue"	"Γλυπτό Vive"
+"[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
+"VivePromoTitle"	"Αντικείμενα Vive"
+"[english]VivePromoTitle"	"Vive Items"
+"VR_PhysicsProp_JSCoffeeMug"	"Κούπα «I <3 Job»"
+"[english]VR_PhysicsProp_JSCoffeeMug"	"I <3 Job Mug"
 }
 }
