--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_hungarian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_hungarian.txt
@@ -1955,7 +1955,7 @@
 "[english]VR_PropTool_FreezeTool_Desc"	"Use this tool to freeze objects in place, thaw objects that are frozen, clone objects or delete them from the world."
 "VR_PhysicsProp_TidehunterToy001"	"Tidehunter játék"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
-"VR_PhysicsProp_TidehunterToy001_Desc"	"A Tidehunter játék a Dota 2-ből."
+"VR_PhysicsProp_TidehunterToy001_Desc"	"A Tidehunter játék a Dota 2-ből.\n\nA Dota 2 játszásával oldható fel."
 "[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"KICSI"
 "[english]SmallBubble"	"SMALL"
@@ -2238,7 +2238,7 @@
 "[english]SetHome_Button"	"Set As Home"
 "IsHome_Button"	"Jelenlegi otthon"
 "[english]IsHome_Button"	"Current Home"
-"PromotedItemTitle"	"HTC Vive környezet"
+"PromotedItemTitle"	"Vive környezet"
 "[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Látogasd meg a HTC által a Vive felhasználóknak készített otthoni környezetet."
 "[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
@@ -2342,9 +2342,9 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"HTC VIVE TÁRGYAK"
+"HTCPromoTitle"	"VIVE TÁRGYAK"
 "[english]HTCPromoTitle"	"VIVE ITEMS"
-"HTCPromoDesc"	"Ne felejtsd el megnézni a HTC Vive tulajdonosoknak készült Vive avatárt és kelléket."
+"HTCPromoDesc"	"Ne felejtsd el megnézni a Vive tulajdonosoknak készült Vive avatárt és kelléket."
 "[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
 "ValvePromoTitle"	"VALVE KÖRNYEZETEK"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
@@ -2596,13 +2596,13 @@
 "[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
 "VR_PropTool_meeseeks_ball_Desc"	"HELLÓ! MR. MEESEEKS VAGYOK! IDE SÜSS!\n\nA Rick and Morty: Virtual Rick-ality beszerzésével oldható fel."
 "[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
-"VR_PhysicsProp_ViveLogoStatue"	"HTC Vive szobor"
+"VR_PhysicsProp_ViveLogoStatue"	"Vive szobor"
 "[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
-"VR_PhysicsProp_ViveLogoStatue_Desc"	"Azon kettősséget megjelenítő klasszikus absztrakt, amely a posztmodernista valóság és a... Hé, ez a Vive logó szobor!\n\nA HTC Vive felhasználók számára érhető el."
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Azon kettősséget megjelenítő klasszikus absztrakt, amely a posztmodernista valóság és a... Hé, ez a Vive logó szobor!\n\nA Vive felhasználók számára érhető el."
 "[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
 "VR_Avatar_ViveHeadset"	"HTC Vive fejszett"
 "[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
-"VR_Avatar_ViveHeadset_Desc"	"A HTC Vive fejszett Deluxe Audio Strappal.\n\nA HTC Vive felhasználóknak érhető el."
+"VR_Avatar_ViveHeadset_Desc"	"A HTC Vive fejszett Deluxe Audio Strappal.\n\nA Vive felhasználóknak érhető el."
 "[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
 "VR_Avatar_OnwardHead"	"MARSOC sisak"
 "[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
@@ -2612,9 +2612,17 @@
 "[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
 "VR_Avatar_MptamHmd_Desc"	"Egy, a fejszettre rögzített kamera felismeri a falon lévő kódokat, hogy kövesse viselője pozícióját. A prototípus kijelzői két, egyedi áramkörökkel összekötött mobiltelefonból készültek."
 "[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
-"VivePromoTitle"	"HTC Vive tárgyak"
+"VivePromoTitle"	"Vive tárgyak"
 "[english]VivePromoTitle"	"Vive Items"
 "VivePromoDesc"	"A Vive felhasználóknak hozzáférése van egy Vive fejszett avatárhoz és egy Vive logó szoborhoz.\n\nEzeket a menü Avatárok, illetve Dolgok részeiben találod."
 "[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
+"VR_PhysicsProp_JSCoffeeMug"	"„I <3 Job” bögre"
+"[english]VR_PhysicsProp_JSCoffeeMug"	"I <3 Job Mug"
+"VR_PhysicsProp_JSCoffeeMug_Desc"	"Bár az emberek hagyományosan koffeines folyadékok bevitelére használták a henger alakú kerámiaedényeket, ezek a tárgyak lövedékként is szolgáltak az elégedetlen alkalmazottak számára munkatársaik és főnökeik megdobálásához.\n\nA Job Simulator beszerzésével oldható fel."
+"[english]VR_PhysicsProp_JSCoffeeMug_Desc"	"Although humans traditionally utilized cylindrical ceramic vessels for ingesting caffeinated liquids, these items also acted as projectiles for disgruntled workers to toss at their coworkers and superiors.\n\nUnlocked by owning Job Simulator."
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Komoly koponya"
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Serious Skull"
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Nyűgözd le barátaidat és félemlítsd meg ellenségeidet ezzel a minőségi Kleer koponyával, amit Sam Stone gyengéd kezei emeltek ki a Kleer hordából. Mert KOMOLYAN érdekel a környezet.\n\nA Serious Sam VR: The Last Hope beszerzésével oldható fel."
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Impress your friends and frighten your enemies with this high-quality Kleer skull, organically sourced from the Kleer horde by the tender hands of Sam Stone. Because you are SERIOUS about the environment.\n\nUnlocked by owning Serious Sam VR: The Last Hope."
 }
 }
