--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_italian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_italian.txt
@@ -1953,7 +1953,7 @@
 "[english]VR_PropTool_FreezeTool_Desc"	"Use this tool to freeze objects in place, thaw objects that are frozen, clone objects or delete them from the world."
 "VR_PhysicsProp_TidehunterToy001"	"Giocattolo di Tidehunter"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
-"VR_PhysicsProp_TidehunterToy001_Desc"	"Il giocattolo di Tidehunter, un Eroe di Dota 2."
+"VR_PhysicsProp_TidehunterToy001_Desc"	"Il giocattolo di Tidehunter, un Eroe di Dota 2.\n\nSbloccato per aver giocato a Dota 2."
 "[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"PICCOLA"
 "[english]SmallBubble"	"SMALL"
@@ -2235,9 +2235,9 @@
 "[english]SetHome_Button"	"Set As Home"
 "IsHome_Button"	"Inizio attuale"
 "[english]IsHome_Button"	"Current Home"
-"PromotedItemTitle"	"Ambiente per HTC Vive"
+"PromotedItemTitle"	"Ambiente di Vive"
 "[english]PromotedItemTitle"	"Vive Environment"
-"PromotedItemDescription"	"Visita l'ambiente iniziale creato da HTC per gli utenti di Vive. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"PromotedItemDescription"	"Visita l'ambiente iniziale creato da HTC per gli utenti di Vive."
 "[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Non ora"
 "[english]DismissLabel"	"Not Now"
@@ -2339,9 +2339,9 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"OGGETTI DI HTC VIVE"
+"HTCPromoTitle"	"OGGETTI DI VIVE"
 "[english]HTCPromoTitle"	"VIVE ITEMS"
-"HTCPromoDesc"	"Creato da HTC per gli utenti di Vive."
+"HTCPromoDesc"	"Scopri l'avatar e gli oggetti di Vive in esclusiva per gli utenti di HTC Vive."
 "[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
 "ValvePromoTitle"	"AMBIENTI DI VALVE"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
@@ -2561,35 +2561,61 @@
 "[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
 "VR_PhysicsProp_AudioshieldShield001_Desc"	"Da equipaggiare in caso di bombardamento musicale.\n\nSbloccato per aver acquistato Audioshield."
 "[english]VR_PhysicsProp_AudioshieldShield001_Desc"	"Equip in case of musical bombardment.\n\nUnlocked by owning Audioshield."
+"VR_PhysicsProp_NekoPlushie"	"Giocattolo di Neko"
+"[english]VR_PhysicsProp_NekoPlushie"	"Neko Toy"
 "VR_PhysicsProp_NekoPlushie_Desc"	"Miao miao miao miao.\n\nSbloccato per aver acquistato Fantastic Contraption."
 "[english]VR_PhysicsProp_NekoPlushie_Desc"	"Meow meow meow meow.\n\nUnlocked by owning Fantastic Contraption."
 "VR_PhysicsProp_GauntletTrophy"	"Il guanto"
 "[english]VR_PhysicsProp_GauntletTrophy"	"The Gauntlet"
+"VR_PhysicsProp_GauntletTrophy_Desc"	"Dannazione, Al, la macchina ci ha preso entrambi! Almeno abbiamo questa mano spaziale come souvenir!\n\nSbloccato per aver acquistato The Gallery - Call of the Starseed."
+"[english]VR_PhysicsProp_GauntletTrophy_Desc"	"Holy smokes, Al, the machine got us both! At least we have this radical souvenir space hand!\n\nUnlocked by owning The Gallery - Call of the Starseed."
 "VR_PhysicsProp_ASAmmoBox"	"Cassa di munizioni"
 "[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
+"VR_PhysicsProp_ASAmmoBox_Desc"	"Fantastico, una cassa di munizioni! Dolci, dolci munizioni! \n\nSbloccato per aver acquistato Arizona Sunshine."
+"[english]VR_PhysicsProp_ASAmmoBox_Desc"	"Ammo Box, Yeah baby! Sweet, sweet ammo! \n\nUnlocked by owning Arizona Sunshine."
 "VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
 "[english]VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"VR_PhysicsProp_AirmechStrikerToy_Desc"	"Un AirMech classe Striker di seconda generazione. Questo modello in scala è stato donato alle agenzie governative che ne hanno ordinati in grandi quantità.\n\nSbloccato per aver acquistato AirMech Command."
+"[english]VR_PhysicsProp_AirmechStrikerToy_Desc"	"Second generation Striker class AirMech. This scale model was gifted to government agencies who placed very large orders.\n\nUnlocked by owning AirMech Command."
 "VR_PhysicsProp_HJGuntherToy"	"Gunther"
 "[english]VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"VR_PhysicsProp_HJGuntherToy_Desc"	"Deciso a diventare molto più che un semplice ristoratore, Gunther si è buttato nel mondo del merchandising. Richiedi subito il tuo personalissimo Gunther giocattolo!\n\nSbloccato per aver acquistato Hover Junkers."
+"[english]VR_PhysicsProp_HJGuntherToy_Desc"	"Branching out from his diner business, Gunther has entered the world of merchandising. Own your very own Gunther figure today!\n\nUnlocked by owning Hover Junkers."
 "VR_Avatar_SpacePirateHelmet"	"Casco da pirata spaziale"
 "[english]VR_Avatar_SpacePirateHelmet"	"Space Pirate Helmet"
+"VR_Avatar_SpacePirateHelmet_Desc"	"Riempito di neurostimolatori per migliorare la vista, l'udito e la capacità di rallentare il tempo, questo casco è uno strumento essenziale per ogni pirata spaziale che si rispetti, anche per quelli che stanno facendo pratica.\n\nSbloccato per aver acquistato Space Pirate Trainer."
+"[english]VR_Avatar_SpacePirateHelmet_Desc"	"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by owning Space Pirate Trainer."
 "VR_PhysicsProp_MiniAtlas"	"Miniatura di Atlas"
 "[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
+"VR_PhysicsProp_MiniAtlas_Desc"	"Quando non deve soffrire l'umiliazione di essere riparato da uno degli sfortunati soggetti di GLaDOS, adesso questo prodotto robotico dei laboratori di Aperture Science può soffrire l'umiliazione di essere un soprammobile per la scrivania.\n\nSbloccato per aver giocato a The Lab."
+"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories can now suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
 "VR_PropTool_meeseeks_ball"	"Palla di Mr. Miguardi"
 "[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
-"VR_PropTool_meeseeks_ball_Desc"	"CIAO! SONO MR. MIGUARDI! GUARDATEMI!\n\nSbloccato per aver acquistato Rick and Morty: Virtual Rickality"
+"VR_PropTool_meeseeks_ball_Desc"	"CIAO! SONO MR. MIGUARDI! GUARDATEMI!\n\nSbloccato per aver acquistato Rick and Morty: Virtual Rickality."
 "[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
-"VR_PhysicsProp_ViveLogoStatue"	"Scultura di HTC Vive"
+"VR_PhysicsProp_ViveLogoStatue"	"Scultura di Vive"
 "[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
-"VR_PhysicsProp_ViveLogoStatue_Desc"	"Un'astrazione classica che rappresenta la dicotomia tra le realtà post-moderne e... ehi, è la scultura del logo di Vive!\n\nDisponibile per gli utenti di HTC Vive."
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Un'astrazione classica che rappresenta la dicotomia tra le realtà post-moderne e... ehi, è la scultura del logo di Vive!\n\nDisponibile per gli utenti di Vive."
 "[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
 "VR_Avatar_ViveHeadset"	"Visore di HTC Vive"
 "[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
-"VR_Avatar_ViveHeadset_Desc"	"Il visore di HTC Vive con tanto di Deluxe Audio Strap.\n\nDisponibile per gli utenti di HTC Vive."
+"VR_Avatar_ViveHeadset_Desc"	"Il visore di HTC Vive con tanto di Deluxe Audio Strap.\n\nDisponibile per gli utenti di Vive."
 "[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
 "VR_Avatar_OnwardHead"	"Elmetto MARSOC"
 "[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
+"VR_Avatar_OnwardHead_Desc"	"L'elmetto balistico di Onward, uno sparatutto tattico multigiocatore. \n\nLa sicurezza prima di tutto!\n\nSbloccato per aver acquistato Onward."
+"[english]VR_Avatar_OnwardHead_Desc"	"A ballistic helmet from the tactical multiplayer shooter, Onward. \n\nSafety first!\n\nUnlocked by owning Onward."
 "VR_Avatar_MptamHmd"	"Prototipo di Valve"
 "[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
+"VR_Avatar_MptamHmd_Desc"	"Una telecamera montata sul visore riconosce i codici sulle pareti per tracciare la posizione del giocatore. Gli schermi prototipo sono stati ricavati da due telefoni cellulari collegati a un circuito personalizzato."
+"[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
+"VivePromoTitle"	"Oggetti di Vive"
+"[english]VivePromoTitle"	"Vive Items"
+"VivePromoDesc"	"Gli utenti di Vive hanno accesso all'avatar \"Visore di HTC Vive\" e ad una statua del logo di Vive.\n\nPuoi trovarli nelle sezioni \"Avatar\" e \"Oggetti\" del menu."
+"[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
+"VR_PhysicsProp_JSCoffeeMug"	"Tazza \"I <3 Job\""
+"[english]VR_PhysicsProp_JSCoffeeMug"	"I <3 Job Mug"
+"VR_PhysicsProp_JSCoffeeMug_Desc"	"Anche se in origine gli umani utilizzavano i contenitori cilindrici in ceramica per ingerire dei liquidi caffeinati, questi oggetti venivano anche usati dai lavoratori scontenti come proiettili da lanciare a colleghi e superiori.\n\nSbloccato per aver acquistato Job Simulator."
+"[english]VR_PhysicsProp_JSCoffeeMug_Desc"	"Although humans traditionally utilized cylindrical ceramic vessels for ingesting caffeinated liquids, these items also acted as projectiles for disgruntled workers to toss at their coworkers and superiors.\n\nUnlocked by owning Job Simulator."
 }
 }
