--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_polish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_polish.txt
@@ -1955,7 +1955,7 @@
 "[english]VR_PropTool_FreezeTool_Desc"	"Use this tool to freeze objects in place, thaw objects that are frozen, clone objects or delete them from the world."
 "VR_PhysicsProp_TidehunterToy001"	"Zabawkowy Tidehunter"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
-"VR_PhysicsProp_TidehunterToy001_Desc"	"Zabawkowy Tidehunter z Dota 2."
+"VR_PhysicsProp_TidehunterToy001_Desc"	"Zabawkowy Tidehunter z Dota 2.\n\nOdblokowane za zagranie w Dota 2."
 "[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"MAŁE"
 "[english]SmallBubble"	"SMALL"
@@ -2238,7 +2238,7 @@
 "[english]SetHome_Button"	"Set As Home"
 "IsHome_Button"	"Obecna domowa"
 "[english]IsHome_Button"	"Current Home"
-"PromotedItemTitle"	"Środowisko HTC Vive"
+"PromotedItemTitle"	"Środowisko Vive"
 "[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Odwiedź środowisko domowe stworzone przez HTC dla użytkowników Vive."
 "[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
@@ -2342,9 +2342,9 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"PRZEDMIOTY HTC VIVE"
+"HTCPromoTitle"	"PRZEDMIOTY VIVE"
 "[english]HTCPromoTitle"	"VIVE ITEMS"
-"HTCPromoDesc"	"Nie zapomnij sprawdzić awatara i rekwizytu stworzonych dla posiadaczy HTC Vive."
+"HTCPromoDesc"	"Nie zapomnij sprawdzić awatara i rekwizytu stworzonych dla posiadaczy Vive."
 "[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
 "ValvePromoTitle"	"ŚRODOWISKA VALVE"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
@@ -2596,13 +2596,13 @@
 "[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
 "VR_PropTool_meeseeks_ball_Desc"	"JESTEM PAN MISZUK! OTO JA!\n\nOdblokowane za posiadanie Rick and Morty: Virtual Rickality"
 "[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
-"VR_PhysicsProp_ViveLogoStatue"	"Rzeźba HTC Vive"
+"VR_PhysicsProp_ViveLogoStatue"	"Rzeźba Vive"
 "[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
-"VR_PhysicsProp_ViveLogoStatue_Desc"	"Klasyczna abstrakcja reprezentująca dychotomię pomiędzy postmodernistycznymi rzeczywistościami a... hejże, to rzeźba logo Vive!\n\nDostępne dla użytkowników HTC Vive."
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Klasyczna abstrakcja reprezentująca dychotomię pomiędzy postmodernistycznymi rzeczywistościami a... hejże, to rzeźba logo Vive!\n\nDostępne dla użytkowników Vive."
 "[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
 "VR_Avatar_ViveHeadset"	"Gogle HTC Vive"
 "[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
-"VR_Avatar_ViveHeadset_Desc"	"Gogle HTC Vive wraz z Deluxe Audio Strap.\n\nDostępne dla użytkowników HTC Vive."
+"VR_Avatar_ViveHeadset_Desc"	"Gogle HTC Vive wraz z Deluxe Audio Strap.\n\nDostępne dla użytkowników Vive."
 "[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
 "VR_Avatar_OnwardHead"	"Hełm MARSOC"
 "[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
@@ -2612,9 +2612,17 @@
 "[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
 "VR_Avatar_MptamHmd_Desc"	"Kamera zamontowana na goglach rozpoznawała kody na ścianie w celu śledzenia pozycji użytkownika. Prototypowe wyświetlacze zostały zbudowane z dwóch telefonów komórkowych podpiętych specjalnym zespołem obwodów elektrycznych."
 "[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
-"VivePromoTitle"	"Przedmioty HTC Vive"
+"VivePromoTitle"	"Przedmioty Vive"
 "[english]VivePromoTitle"	"Vive Items"
 "VivePromoDesc"	"Użytkownicy Vive posiadają dostęp do awatara gogli Vive oraz statuy logo Vive.\n\nZnajdziesz je w działach awatarów oraz rzeczy w menu."
 "[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
+"VR_PhysicsProp_JSCoffeeMug"	"Kubek „Ja <3 moją pracę”"
+"[english]VR_PhysicsProp_JSCoffeeMug"	"I <3 Job Mug"
+"VR_PhysicsProp_JSCoffeeMug_Desc"	"Pomimo tego, że pierwotnie ludzie wykorzystywali cylindryczne naczynia ceramiczne do spożywania napojów kofeinowych, działały one również jako pociski rzucane przez niezadowolonych pracowników w kierunku ich znajomych z pracy oraz przełożonych.\n\nOdblokowane za posiadanie Job Simulator."
+"[english]VR_PhysicsProp_JSCoffeeMug_Desc"	"Although humans traditionally utilized cylindrical ceramic vessels for ingesting caffeinated liquids, these items also acted as projectiles for disgruntled workers to toss at their coworkers and superiors.\n\nUnlocked by owning Job Simulator."
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Poważna czaszka"
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Serious Skull"
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Zaimponuj swoim znajomym i wzbudź postrach wśród wrogów dzięki tej wysokojakościowej czaszce Kleera własnoręcznie wyrwanej z hordy Kleerów przez Sama Stone'a. Bo jesteś POWAŻNYM, jeżeli chodzi o środowisko.\n\nOdblokowane za posiadanie Serious Sam VR: The Last Hope."
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Impress your friends and frighten your enemies with this high-quality Kleer skull, organically sourced from the Kleer horde by the tender hands of Sam Stone. Because you are SERIOUS about the environment.\n\nUnlocked by owning Serious Sam VR: The Last Hope."
 }
 }
