--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_portuguese.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_portuguese.txt
@@ -1955,7 +1955,7 @@
 "[english]VR_PropTool_FreezeTool_Desc"	"Use this tool to freeze objects in place, thaw objects that are frozen, clone objects or delete them from the world."
 "VR_PhysicsProp_TidehunterToy001"	"Boneco do Tidehunter"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
-"VR_PhysicsProp_TidehunterToy001_Desc"	"Um brinquedo do Tidehunter, do Dota 2."
+"VR_PhysicsProp_TidehunterToy001_Desc"	"Um brinquedo do Tidehunter, do Dota 2.\n\nItem desbloqueado ao jogar o jogo Dota 2."
 "[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"PEQUENA"
 "[english]SmallBubble"	"SMALL"
@@ -2238,7 +2238,7 @@
 "[english]SetHome_Button"	"Set As Home"
 "IsHome_Button"	"Início atual"
 "[english]IsHome_Button"	"Current Home"
-"PromotedItemTitle"	"Ambiente HTC Vive"
+"PromotedItemTitle"	"Ambiente do Vive"
 "[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Visita o ambiente criado pela HTC para utilizadores do Vive."
 "[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
@@ -2342,9 +2342,9 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"ARTIGOS DO HTC VIVE"
+"HTCPromoTitle"	"ITENS DO VIVE"
 "[english]HTCPromoTitle"	"VIVE ITEMS"
-"HTCPromoDesc"	"Não te esqueças de ver os itens do Vive exclusivos para utilizadores do HTC Vive."
+"HTCPromoDesc"	"Não te esqueças de ver os itens do Vive exclusivos para utilizadores do Vive."
 "[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
 "ValvePromoTitle"	"AMBIENTES DA VALVE"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
@@ -2596,13 +2596,13 @@
 "[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
 "VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nItem desbloqueado ao adquirir o jogo Rick and Morty: Virtual Rick-ality."
 "[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
-"VR_PhysicsProp_ViveLogoStatue"	"Escultura do HTC Vive"
+"VR_PhysicsProp_ViveLogoStatue"	"Escultura do Vive"
 "[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
-"VR_PhysicsProp_ViveLogoStatue_Desc"	"Uma abstração clássica que representa a dicotomia entre realidades pós-modernistas e... ei, é a escultura do logótipo do Vive!\n\nDisponível para todos os utilizadores do HTC Vive."
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Uma abstração clássica que representa a dicotomia entre realidades pós-modernistas e... ei, é a escultura do logótipo do Vive!\n\nDisponível para todos os utilizadores do Vive."
 "[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
 "VR_Avatar_ViveHeadset"	"Headset do HTC Vive"
 "[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
-"VR_Avatar_ViveHeadset_Desc"	"O headset do HTC Vive com o Deluxe Audio Strap.\n\nDisponível para todos os utilizadores do HTC Vive."
+"VR_Avatar_ViveHeadset_Desc"	"O headset do HTC Vive com o Deluxe Audio Strap.\n\nDisponível para todos os utilizadores do Vive."
 "[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
 "VR_Avatar_OnwardHead"	"Capacete do MARSOC"
 "[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
@@ -2612,9 +2612,17 @@
 "[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
 "VR_Avatar_MptamHmd_Desc"	"Uma câmara no headset reconhece códigos nas paredes para detetar a posição do utilizador. Os ecrãs do protótipo foram criados a partir de dois telemóveis com circuitos modificados."
 "[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
-"VivePromoTitle"	"Artigos do HTC Vive"
+"VivePromoTitle"	"Itens do Vive"
 "[english]VivePromoTitle"	"Vive Items"
 "VivePromoDesc"	"Utilizadores do Vive têm acesso a um headset do Vive para o avatar e uma estátua do logótipo do Vive.\nPodes encontrá-los nas secções \"Avatares\" e \"Coisas\" no menu."
 "[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
+"VR_PhysicsProp_JSCoffeeMug"	"Caneca \"I <3 Job\""
+"[english]VR_PhysicsProp_JSCoffeeMug"	"I <3 Job Mug"
+"VR_PhysicsProp_JSCoffeeMug_Desc"	"Apesar de, tradicionalmente, os humanos utilizarem recipientes cilíndricos de cerâmica para fins de ingestão de líquidos com cafeína, certos empregados descontentes também os atiravam aos seus colegas e superiores, como se de projéteis se tratassem.\n\nItem desbloqueado ao adquirir o jogo Job Simulator."
+"[english]VR_PhysicsProp_JSCoffeeMug_Desc"	"Although humans traditionally utilized cylindrical ceramic vessels for ingesting caffeinated liquids, these items also acted as projectiles for disgruntled workers to toss at their coworkers and superiors.\n\nUnlocked by owning Job Simulator."
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Caveira Séria"
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Serious Skull"
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Impressiona os teus amigos e assusta os teus inimigos com esta caveira de Kleer de alta qualidade, naturalmente arrancada das manadas selvagens de Kleers pelas mãos delicadas de Sam Stone. Porque é preciso ser-se SÉRIO sobre o ambiente.\n\nItem desbloqueado ao adquirir o jogo Serious Sam VR: The Last Hope.	"
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Impress your friends and frighten your enemies with this high-quality Kleer skull, organically sourced from the Kleer horde by the tender hands of Sam Stone. Because you are SERIOUS about the environment.\n\nUnlocked by owning Serious Sam VR: The Last Hope."
 }
 }
