--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_romanian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_romanian.txt
@@ -13,6 +13,8 @@
 "[english]VR_Map_Venice_Courtyard"	"Venice Courtyard"
 "VR_Map_Vesper_Peak"	"Vârful Vesper"
 "[english]VR_Map_Vesper_Peak"	"Vesper Peak"
+"VR_DynamicProp_Mars_Rover_Curiosity"	"Curiosity"
+"[english]VR_DynamicProp_Mars_Rover_Curiosity"	"Curiosity"
 "ContentBrowser_Title"	"Medii"
 "[english]ContentBrowser_Title"	"Environments"
 "ContentBrowser_ItemName"	"{s:name}"
@@ -213,6 +215,10 @@
 "[english]TutorialPage1_Title"	"Moving around in Destinations"
 "TutorialPage2_Title"	"Utilizarea recuzitelor în Destinații"
 "[english]TutorialPage2_Title"	"Using Props in Destinations"
+"TutorialPage1_Tile1_Desc"	"Pentru a te teleporta, apasă și ține apăsat butonul trackpadului."
+"[english]TutorialPage1_Tile1_Desc"	"To teleport, press down and hold the trackpad button."
+"TutorialPage1_Tile3_Desc"	"Eliberează butonul trackpadului pentru a te teleporta la cercul verde."
+"[english]TutorialPage1_Tile3_Desc"	"Release the trackpad button to teleport to the green circle."
 "TutorialPage_Next"	"Următorul"
 "[english]TutorialPage_Next"	"Next"
 "TutorialPage_Done"	"Gata"
@@ -223,6 +229,8 @@
 "[english]TutorialPage2_Tile2_Controller_Desc"	"Here you can navigate to and browse other Destinations using the A button."
 "Mars_ApproachTitle"	"Apropiere"
 "[english]Mars_ApproachTitle"	"Approach"
+"Mars_DunesTitle"	"Dune"
+"[english]Mars_DunesTitle"	"Dunes"
 "Mars_ExitTitle"	"Ieșire"
 "[english]Mars_ExitTitle"	"Exit"
 "EnglishChurch_CaptureTitle"	"Capturează"
@@ -287,12 +295,16 @@
 "[english]ToggleHeadText"	"Head"
 "ToggleHandsText"	"Mâini"
 "[english]ToggleHandsText"	"Hands"
+"Customize_Avatar_Title"	"Personalizează avatarul"
+"[english]Customize_Avatar_Title"	"Customize Avatar"
 "SettingsPage_Done"	"Gata"
 "[english]SettingsPage_Done"	"Done"
 "Friends_InDestinations"	"În SteamVR"
 "[english]Friends_InDestinations"	"In SteamVR"
 "Friends_Destination"	"Vizitează {s:destination_title}"
 "[english]Friends_Destination"	"Visiting {s:destination_title}"
+"Friends_Invited"	"Invitația a fost trimisă"
+"[english]Friends_Invited"	"Invitation Sent"
 "Friends_Button_AcceptInvite"	"Acceptă"
 "[english]Friends_Button_AcceptInvite"	"Accept"
 "Friends_Button_DeclineInvite"	"Ignoră"
@@ -317,6 +329,8 @@
 "[english]VR_Avatar_G"	"Head - Puck"
 "VR_Avatar_I"	"Cap - Mic"
 "[english]VR_Avatar_I"	"Head - Small"
+"VR_Avatar_Hand_Default"	"Controllere Vive"
+"[english]VR_Avatar_Hand_Default"	"Vive controllers"
 "VR_Avatar_Hand_Desc"	"Mâini simple."
 "[english]VR_Avatar_Hand_Desc"	"Simple hands."
 "Friends_Button_CancelDownload"	"Anulare"
@@ -411,12 +425,18 @@
 "[english]ValveLobby_IntroTitle"	"Welcome"
 "ValveLobby_TrophiesTitle"	"Trofee"
 "[english]ValveLobby_TrophiesTitle"	"Trophies"
+"ValveLobby_MagazinesTitle"	"Reviste"
+"[english]ValveLobby_MagazinesTitle"	"Magazines"
 "ValveLobby_CSMagazinesTitle"	"Counter-Strike"
 "[english]ValveLobby_CSMagazinesTitle"	"Counter-Strike"
 "ArcadeToss_ScoreRed"	"ECHIPA ROȘIE"
 "[english]ArcadeToss_ScoreRed"	"TEAM RED"
 "ArcadeToss_ScoreBlue"	"ECHIPA ALBASTRĂ"
 "[english]ArcadeToss_ScoreBlue"	"TEAM BLUE"
+"ArcadeToss_ScoreRedWins"	"ECHIPA ROȘIE A CÂȘTIGAT!"
+"[english]ArcadeToss_ScoreRedWins"	"TEAM RED WINS!"
+"ArcadeToss_ScoreBlueWins"	"ECHIPA ALBASTRĂ A CÂȘTIGAT!"
+"[english]ArcadeToss_ScoreBlueWins"	"TEAM BLUE WINS!"
 "LobbiesDescription"	"Selectează \"Deschis publicului\" pentru a deschide destinația ta actuală publicului și a permite altor jucători să ți se alăture aici."
 "[english]LobbiesDescription"	"Hosting a Room allows other players to join you in this environment."
 "ItemDetail_Select"	"Selectează"
@@ -511,6 +531,8 @@
 "[english]SortPlaytime"	"Playtime"
 "SortType"	"Tip"
 "[english]SortType"	"Type"
+"TagTitle"	"Filtrează după etichetă:"
+"[english]TagTitle"	"Filter by Tag:"
 "ToolsTag"	"Utilitare"
 "[english]ToolsTag"	"Tools"
 "VR_PhysicsProp_OilDrum"	"Butoi"
