--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_schinese.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_schinese.txt
@@ -87,9 +87,9 @@
 "[english]ItemDetail_ViewInWorkshop"	"Workshop"
 "PlayerBillboard_Name"	"{s:player_name}"
 "[english]PlayerBillboard_Name"	"{s:player_name}"
-"WelcomePanel_Title"	"欢迎进入 SteamVR"
+"WelcomePanel_Title"	"欢迎光临！"
 "[english]WelcomePanel_Title"	"Welcome!"
-"WelcomePanel_PressMenuButton"	"欢迎进入 SteamVR！\n\n按下控制器上的“菜单”按钮开始。"
+"WelcomePanel_PressMenuButton"	"欢迎光临！\n\n按下控制器上的“菜单”键开始。"
 "[english]WelcomePanel_PressMenuButton"	"Welcome! \n\nPress the Menu button on your controller to begin."
 "DOTA_Workshop_Publish_WindowTitle"	"工坊发布"
 "[english]DOTA_Workshop_Publish_WindowTitle"	"Workshop Publish"
@@ -515,7 +515,7 @@
 "[english]FriendsToggleLabelText"	"Social"
 "AvatarToggleLabelText"	"预览化身"
 "[english]AvatarToggleLabelText"	"Preview Avatar"
-"Destinations_WelcomeText"	"欢迎进入 SteamVR"
+"Destinations_WelcomeText"	"欢迎光临！"
 "[english]Destinations_WelcomeText"	"Welcome!"
 "WelcomePanel_UpdateDesc"	"欢迎进入 SteamVR！\n\n按下“菜单”按钮浏览环境或与好友会面。\n\n要订阅更多环境，请选择“环境”面板中的“获取更多”标签页。如需更多帮助，请选择“帮助”按钮。"
 "[english]WelcomePanel_UpdateDesc"	"Welcome to SteamVR! \n\nPress the Menu button to browse environments and meet up with friends.\n\nTo subscribe to more environments, select the 'Get More' tab in the Environments panel. For more help, select the Help button."
@@ -567,9 +567,9 @@
 "[english]MuteOtherPlayers"	"Mute Other Players"
 "MuteMyself"	"将自己静音"
 "[english]MuteMyself"	"Mute Myself"
-"PersonalBubble"	"个人气泡"
+"PersonalBubble"	"个人气泡尺寸"
 "[english]PersonalBubble"	"Personal Bubble Size"
-"PersonalBubbleDesc"	"打开个人气泡后，任何玩家或玩家持有的道具在您周围三英尺（约 0.9 米）之内时，便会消失。"
+"PersonalBubbleDesc"	"个人气泡使玩家或道具在靠近你时会淡出"
 "[english]PersonalBubbleDesc"	"Your personal bubble makes players and props fade out when they are near you."
 "SetStatus"	"设置状态："
 "[english]SetStatus"	"Set Status:"
@@ -639,7 +639,7 @@
 "[english]LobbiesOpenLobby"	"Public Room"
 "LobbiesLeaveLobby"	"离开此房间"
 "[english]LobbiesLeaveLobby"	"Leave This Room"
-"WelcomePanel_PressYButton"	"欢迎进入 SteamVR！\n\n请确保 SteamVR 游戏窗口在您计算机上处于活动状态，然后按下控制器上的 Y 键开始。"
+"WelcomePanel_PressYButton"	"欢迎光临！\n\n请确保 SteamVR 游戏窗口在电脑上处于活动状态，然后按下控制器上的 Y 键开始。"
 "[english]WelcomePanel_PressYButton"	"Welcome! \n\nMake sure the SteamVR game window is active on your computer, and press the Y button on your controller to begin."
 "WelcomePanel_UpdateDescController"	"欢迎进入 SteamVR！\n\n按下 Y 键浏览环境或与好友会面。\n\n要订阅更多环境，请选择“环境”面板中的“获取更多”标签页。如需更多帮助，请选择“帮助”按钮。"
 "[english]WelcomePanel_UpdateDescController"	"Welcome to SteamVR! \n\nPress the Y button to browse environments and meet up with friends.\n\nTo subscribe to more environments, select the 'Get More' tab in the Environments panel. For more help, select the Help button."
@@ -655,7 +655,7 @@
 "[english]TutorialWelcome_Tile1_Desc"	"Welcome to SteamVR Home! This is your home space."
 "TutorialWelcome_Tile2_Desc"	"这是您可以自定义、互动和社交的家。"
 "[english]TutorialWelcome_Tile2_Desc"	"Your home space is interactive, customizable, and social."
-"TutorialWelcome_Tile3_Desc"	"按下控制器上的菜单键来打开和关闭此菜单。"
+"TutorialWelcome_Tile3_Desc"	"按下控制器上的菜单键来打开和关闭主菜单。"
 "[english]TutorialWelcome_Tile3_Desc"	"To open and close the main menu, use the Menu button on your controller."
 "TutorialWelcome_Bottom_Desc"	"别忘了访问创意工坊下载更多来自社区的环境。"
 "[english]TutorialWelcome_Bottom_Desc"	"Don't forget to visit the Workshop to download more environments from the community."
@@ -687,7 +687,7 @@
 "[english]TutorialTeleport_Tile3_Desc"	"Release the trackpad button to teleport to the green circle."
 "TutorialTeleport_Bottom_Desc"	"传送弧线在指向无法传送的地点时会变成红色。"
 "[english]TutorialTeleport_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
-"TutorialWelcome_Tile1_Controller_Desc"	"欢迎进入 SteamVR！"
+"TutorialWelcome_Tile1_Controller_Desc"	"欢迎光临！"
 "[english]TutorialWelcome_Tile1_Controller_Desc"	"Welcome!"
 "TutorialWelcome_Tile2_Controller_Desc"	"在 SteamVR 中，您可以与好友一起访问真实的与虚构的场所。"
 "[english]TutorialWelcome_Tile2_Controller_Desc"	"In SteamVR you can visit real and imaginary places with friends."
@@ -1099,7 +1099,7 @@
 "[english]VR_PhysicsProp_PortalCake_Desc"	"So delicious and moist.\n\nAs seen in Portal."
 "VR_PhysicsProp_StorageCube"	"储存方块"
 "[english]VR_PhysicsProp_StorageCube"	"Storage Cube"
-"VR_PhysicsProp_StorageCube_Desc"	"光圈科学重量储存方块建造暨物流暨交换仓库出借。\n\n出自《传送门》。"
+"VR_PhysicsProp_StorageCube_Desc"	"光圈科技重量储存方块建造暨物流暨交换仓库出借。\n\n出自《传送门》。"
 "[english]VR_PhysicsProp_StorageCube_Desc"	"On loan from the Aperture Science Weighted Storage Cube Construction, Distribution, and Exchange Annex.\n\nAs seen in Portal."
 "VR_PhysicsProp_Techies_Barrel"	"工程师"
 "[english]VR_PhysicsProp_Techies_Barrel"	"Techies"
@@ -2465,5 +2465,85 @@
 "[english]VRHome_Patio_Bar"	"BAR"
 "Dashboard_Whats_New_2"	"要了解更多关于探索、自定义和与好友会面的信息，请选择“教程”。"
 "[english]Dashboard_Whats_New_2"	"To learn more about exploring, customizing, and meeting up with friends, select Tutorials."
+"PowerOnText"	"开启电源"
+"[english]PowerOnText"	"POWER ON"
+"Quest_PeanutGallery_Snake"	"蛇玩偶任务"
+"[english]Quest_PeanutGallery_Snake"	"Stuffed Snake Quest"
+"Quest_PeanutGallery_Snake_Desc"	"在落花生长廊中获得至少 1000 分，赢取蛇玩偶奖品。"
+"[english]Quest_PeanutGallery_Snake_Desc"	"Win the Stuffed Snake prize by scoring at least 1000 points in Peanut Gallery."
+"Quest_PeanutGallery_Alligator"	"鳄鱼玩偶任务"
+"[english]Quest_PeanutGallery_Alligator"	"Stuffed Alligator Quest"
+"Quest_PeanutGallery_Alligator_Desc"	"在落花生长廊中获得至少 1500 分，赢取鳄鱼玩偶奖品。"
+"[english]Quest_PeanutGallery_Alligator_Desc"	"Win the Stuffed Alligator prize by scoring at least 1500 points in Peanut Gallery."
+"Quest_PeanutGallery_Giraffe"	"长颈鹿玩偶任务"
+"[english]Quest_PeanutGallery_Giraffe"	"Stuffed Giraffe Quest"
+"Quest_PeanutGallery_Giraffe_Desc"	"在落花生长廊中获得至少 2000 分，赢取长颈鹿玩偶奖品。"
+"[english]Quest_PeanutGallery_Giraffe_Desc"	"Win the Stuffed Giraffe prize by scoring at least 2000 points in Peanut Gallery."
+"Quest_PeanutGallery_Elephant"	"大象玩偶任务"
+"[english]Quest_PeanutGallery_Elephant"	"Stuffed Elephant Quest"
+"Quest_PeanutGallery_Elephant_Desc"	"在落花生长廊中获得至少 2500 分，赢取大象玩偶奖品。"
+"[english]Quest_PeanutGallery_Elephant_Desc"	"Win the Stuffed Elephant prize by scoring at least 2500 points in Peanut Gallery."
+"ContentBrowser_ItemDesc"	"{s:description}"
+"[english]ContentBrowser_ItemDesc"	"{s:description}"
+"ItemDetail_Ratings"	"评分"
+"[english]ItemDetail_Ratings"	"Ratings"
+"ItemDetail_Rating"	"评分"
+"[english]ItemDetail_Rating"	"Rating"
+"Friends_Name"	"{s:name}"
+"[english]Friends_Name"	"{s:name}"
+"Friends_NickName"	"({s:nickname})"
+"[english]Friends_NickName"	"({s:nickname})"
+"WelcomePanel_UpdateText"	"{s:workshop_title}"
+"[english]WelcomePanel_UpdateText"	"{s:workshop_title}"
+"ResetButtonText"	"重置位置"
+"[english]ResetButtonText"	"Reset Position"
+"ResetDesc"	"这会重置环境，以与定位区域对齐。"
+"[english]ResetDesc"	"This resets your environment to line up with your tracked space."
+"BrowseWorkshop_Visit"	"访问"
+"[english]BrowseWorkshop_Visit"	"Visit"
+"BackgroundsFirstTimeText"	"在背景栏目中，您将找到各种背景，用于自定义您的环境。\n\n要开始探索，选择上面的“获得更多”选项卡。这样，您将能够在 SteamVR 创意工坊中浏览并下载新背景。\n\n注意：不是所有环境都兼容自定义背景。"
+"[english]BackgroundsFirstTimeText"	"Here in the Backgrounds section, you'll find different backgrounds to customize your environment. \n\nTo start exploring, select the 'Get More' tab above. There you'll be able to browse and download new backgrounds from the SteamVR Workshop.\n\nNote: Not every environment is compatible with customizable backgrounds."
+"VR_Avatar_keemo_head"	"奇莫"
+"[english]VR_Avatar_keemo_head"	"Keemo"
+"VR_Avatar_keemo_head_Desc"	"海岸码头的奇莫。"
+"[english]VR_Avatar_keemo_head_Desc"	"Keemo from Seadocks."
+"VR_Avatar_keli_head"	"凯利"
+"[english]VR_Avatar_keli_head"	"Keli"
+"VR_Avatar_keli_head_Desc"	"海岸码头的凯利。"
+"[english]VR_Avatar_keli_head_Desc"	"Keli from Seadocks."
+"VR_Avatar_mochi_head"	"麻糬"
+"[english]VR_Avatar_mochi_head"	"Mochi"
+"VR_Avatar_mochi_head_Desc"	"海岸码头的麻糬"
+"[english]VR_Avatar_mochi_head_Desc"	"Mochi from Seadocks"
+"VR_Avatar_teemo_head"	"提莫"
+"[english]VR_Avatar_teemo_head"	"Teemo"
+"VR_Avatar_teemo_head_Desc"	"海岸码头的提莫。"
+"[english]VR_Avatar_teemo_head_Desc"	"Teemo from seadocks."
+"EmptyBackgroundItem_Name"	"[ 无背景 ]"
+"[english]EmptyBackgroundItem_Name"	"[ No Background ]"
+"EmptyBackgroundItem_Desc"	"使用地图的原始天空盒。"
+"[english]EmptyBackgroundItem_Desc"	"Use the original skybox from the map."
+"ResetAnchorButtonText"	"重置位置"
+"[english]ResetAnchorButtonText"	"Reset Position"
+"ResetAnchorDesc"	"这会重置环境，以与定位区域对齐。"
+"[english]ResetAnchorDesc"	"This resets your environment to line up with your tracked space."
+"VR_Avatar_Wearable_MopedHelmet001"	"轻便摩托车头盔"
+"[english]VR_Avatar_Wearable_MopedHelmet001"	"Moped Helmet"
+"VR_Avatar_Wearable_MopedHelmet001_Desc"	"轻便摩托车骑手用的头盔。"
+"[english]VR_Avatar_Wearable_MopedHelmet001_Desc"	"A helmet for a moped rider."
+"VR_Avatar_Wearable_PinHawaiiChell"	"胸章 - 夏威夷原住民 Chell"
+"[english]VR_Avatar_Wearable_PinHawaiiChell"	"Pin - Hawaiian Chell"
+"VR_Avatar_Wearable_PinHawaiiChell_Desc"	"一枚 Chell 跳着呼啦舞的胸章。"
+"[english]VR_Avatar_Wearable_PinHawaiiChell_Desc"	"A hula-dancing Chell pin."
+"VR_Map_HawaiiBeach"	"夏威夷海滩"
+"[english]VR_Map_HawaiiBeach"	"Hawai'i Beach"
+"VR_Map_HawaiiBeach_Desc"	"夏威夷岛上的一片海滩。"
+"[english]VR_Map_HawaiiBeach_Desc"	"A beach on the Island of Hawai'i."
+"Quest_Pin_Hawaii_Chell"	"夏威夷原住民 Chell 胸章任务"
+"[english]Quest_Pin_Hawaii_Chell"	"Hawaiian Chell Pin Quest"
+"Quest_Pin_Hawaii_Chell_Desc"	"找到一枚坐落在海滩旁边木桩上的 Chell 跳着呼啦舞的胸章。"
+"[english]Quest_Pin_Hawaii_Chell_Desc"	"Find a hula-dancing Chell pin sitting on a log near the beach."
+"Quest_Pin_Hawaii_Lab_Desc"	"找到位于海滩熔岩岩石之中的隐藏光圈科技胸章。"
+"[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
 }
 }
