--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_spanish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_spanish.txt
@@ -2165,7 +2165,7 @@
 "[english]SetHome_Button"	"Set As Home"
 "IsHome_Button"	"Inicio actual"
 "[english]IsHome_Button"	"Current Home"
-"PromotedItemTitle"	"Entorno de HTC Vive"
+"PromotedItemTitle"	"Entorno de Vive"
 "[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Visita el entorno inicial creado por HTC para los usuarios de Vive. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
 "[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
@@ -2435,14 +2435,22 @@
 "[english]VR_Furniture_WallClockAnalog"	"Wall Clock"
 "VR_Furniture_WallClockAnalog_Desc"	"Un reloj de pared analógico."
 "[english]VR_Furniture_WallClockAnalog_Desc"	"An analog wall clock."
+"VR_Avatar_Wearable_PinHawaiiChell"	"Pin - Chell hawaiana"
+"[english]VR_Avatar_Wearable_PinHawaiiChell"	"Pin - Hawaiian Chell"
 "VR_Avatar_Wearable_PinHawaiiLab"	"Pin - Personaje de Aperture Science"
 "[english]VR_Avatar_Wearable_PinHawaiiLab"	"Pin - Aperture Science"
+"VR_Avatar_Wearable_PinHawaiiLab_Desc"	"Un pin con temática de Aperture Science de Hawái."
+"[english]VR_Avatar_Wearable_PinHawaiiLab_Desc"	"An Aperture Science themed pin from Hawaii."
 "VR_Map_HawaiiBeach"	"Playa de Hawái"
 "[english]VR_Map_HawaiiBeach"	"Hawai'i Beach"
 "VR_Map_HawaiiBeach_Desc"	"Una playa en la isla de Hawái."
 "[english]VR_Map_HawaiiBeach_Desc"	"A beach on the Island of Hawai'i."
+"Quest_Pin_Hawaii_Chell"	"Misión del pin de Chell hawaiana"
+"[english]Quest_Pin_Hawaii_Chell"	"Hawaiian Chell Pin Quest"
 "Quest_Pin_Hawaii_Chell_Desc"	"Encuentra un pin de Chell bailando hula sobre un tronco cerca de la playa."
 "[english]Quest_Pin_Hawaii_Chell_Desc"	"Find a hula-dancing Chell pin sitting on a log near the beach."
+"Quest_Pin_Hawaii_Lab"	"Misión del pin de Aperture Science"
+"[english]Quest_Pin_Hawaii_Lab"	"Aperture Science Pin Quest"
 "Quest_Pin_Hawaii_Lab_Desc"	"Encuentra un pin de Aperture Science escondido entre las rocas de lava en la playa."
 "[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
 "VR_PhysicsProp_AudioshieldShield001"	"Escudo de Audioshield"
@@ -2495,5 +2503,7 @@
 "[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
 "VR_Avatar_MptamHmd_Desc"	"Una cámara montada en el visor reconoce códigos colocados en las paredes para realizar un seguimiento de la posición del portador. Las pantallas del prototipo se construyeron a partir de dos teléfonos móviles conectados mediante circuitería creada para la ocasión."
 "[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
+"VR_PhysicsProp_JSCoffeeMug"	"Taza de I <3 Job"
+"[english]VR_PhysicsProp_JSCoffeeMug"	"I <3 Job Mug"
 }
 }
