--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_tchinese.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_tchinese.txt
@@ -2184,5 +2184,23 @@
 "[english]SteamVRNowTitle"	"STEAMVR NOW"
 "UGCItem_Title_Text"	"來自："
 "[english]UGCItem_Title_Text"	"From:"
+"PowerOnText"	"電源開啟"
+"[english]PowerOnText"	"POWER ON"
+"ContentBrowser_ItemDesc"	"{s:description}"
+"[english]ContentBrowser_ItemDesc"	"{s:description}"
+"ItemDetail_Ratings"	"評價"
+"[english]ItemDetail_Ratings"	"Ratings"
+"ItemDetail_Rating"	"評價"
+"[english]ItemDetail_Rating"	"Rating"
+"Friends_Name"	"{s:name}"
+"[english]Friends_Name"	"{s:name}"
+"Friends_NickName"	"({s:nickname})"
+"[english]Friends_NickName"	"({s:nickname})"
+"WelcomePanel_UpdateText"	"{s:workshop_title}"
+"[english]WelcomePanel_UpdateText"	"{s:workshop_title}"
+"VR_Avatar_Wearable_PinHawaiiLab"	"徽章 - 光圈科技"
+"[english]VR_Avatar_Wearable_PinHawaiiLab"	"Pin - Aperture Science"
+"VR_Avatar_Wearable_PinHawaiiLab_Desc"	"來自夏威夷的光圈科學主題徽章。"
+"[english]VR_Avatar_Wearable_PinHawaiiLab_Desc"	"An Aperture Science themed pin from Hawaii."
 }
 }
