--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_ukrainian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_ukrainian.txt
@@ -1953,7 +1953,7 @@
 "[english]VR_PropTool_FreezeTool_Desc"	"Use this tool to freeze objects in place, thaw objects that are frozen, clone objects or delete them from the world."
 "VR_PhysicsProp_TidehunterToy001"	"Іграшковий Tidehunter"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
-"VR_PhysicsProp_TidehunterToy001_Desc"	"Іграшковий Tidehunter з гри Dota 2."
+"VR_PhysicsProp_TidehunterToy001_Desc"	"Іграшковий Tidehunter з гри Dota 2.\n\nРозблоковано завдяки грі у Dota 2."
 "[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"МАЛЕНЬКА"
 "[english]SmallBubble"	"SMALL"
@@ -2235,7 +2235,7 @@
 "[english]SetHome_Button"	"Set As Home"
 "IsHome_Button"	"Поточна домівка"
 "[english]IsHome_Button"	"Current Home"
-"PromotedItemTitle"	"Середовище HTC Vive"
+"PromotedItemTitle"	"Середовище Vive"
 "[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Відвідайте домашнє середовище, створене HTC для користувачів Vive."
 "[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
@@ -2339,9 +2339,9 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"ПРЕДМЕТИ HTC VIVE"
+"HTCPromoTitle"	"ПРЕДМЕТИ VIVE"
 "[english]HTCPromoTitle"	"VIVE ITEMS"
-"HTCPromoDesc"	"Не забудьте оглянути аватар та об’єкт Vive для власників HTC Vive."
+"HTCPromoDesc"	"Не забудьте оглянути аватар та об’єкт Vive для власників Vive."
 "[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
 "ValvePromoTitle"	"СЕРЕДОВИЩА VALVE"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
@@ -2587,31 +2587,39 @@
 "[english]VR_Avatar_SpacePirateHelmet_Desc"	"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by owning Space Pirate Trainer."
 "VR_PhysicsProp_MiniAtlas"	"Мініатюрний атлас"
 "[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
-"VR_PhysicsProp_MiniAtlas_Desc"	"Цей чудовий роботехнічний продукт лабораторії «Aperture» раніше зазнавав принизливих спроб ремонту від безталанних піддослідних суб’єктів ҐЛаДОС, а нині мусить страждати, слугуючи прикрасою для столу.\n\nРозблоковано завдяки грі The Lab."
+"VR_PhysicsProp_MiniAtlas_Desc"	"Цей чудовий роботехнічний продукт лабораторії «Aperture» раніше зазнавав принизливих спроб ремонту від безталанних піддослідних суб’єктів ҐЛаДОС, а нині мусить страждати у вигляді прикраси для столу.\n\nРозблоковано завдяки грі The Lab."
 "[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories can now suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
 "VR_PropTool_meeseeks_ball"	"М’яч пана Місікса"
 "[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
 "VR_PropTool_meeseeks_ball_Desc"	"ПРИВІТ! Я ПАН МІСІКС! ПОГЛЯНЬТЕ НА МЕНЕ!\n\nРозблоковано завдяки володінню Rick and Morty: Virtual Rickality."
 "[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
-"VR_PhysicsProp_ViveLogoStatue"	"Скульптура HTC Vive"
+"VR_PhysicsProp_ViveLogoStatue"	"Скульптура Vive"
 "[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
-"VR_PhysicsProp_ViveLogoStatue_Desc"	"Класична абстракція, яка представляє дихотомію між реальностями постмодернізму і… агов, це скульптура логотипу Vive!\n\nДоступно користувачам HTC Vive."
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Класична абстракція, яка представляє дихотомію між реальностями постмодернізму і… агов, це скульптура логотипу Vive!\n\nДоступно користувачам Vive."
 "[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
 "VR_Avatar_ViveHeadset"	"Шолом HTC Vive"
 "[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
-"VR_Avatar_ViveHeadset_Desc"	"Шолом HTC Vive з Deluxe Audio Strap.\n\nДоступно користувачам HTC Vive."
+"VR_Avatar_ViveHeadset_Desc"	"Шолом HTC Vive з Deluxe Audio Strap.\n\nДоступно користувачам Vive."
 "[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
 "VR_Avatar_OnwardHead"	"Шолом MARSOC"
 "[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
-"VR_Avatar_OnwardHead_Desc"	"Балістичний шолом із тактичного багатокористувацького шутера Onward. \n\nБезпека насамперед!\n\nЗдобуто володінням гри Onward."
+"VR_Avatar_OnwardHead_Desc"	"Балістичний шолом із тактичного багатокористувацького шутера Onward. \n\nБезпека насамперед!\n\nРозблоковано завдяки володінню Onward."
 "[english]VR_Avatar_OnwardHead_Desc"	"A ballistic helmet from the tactical multiplayer shooter, Onward. \n\nSafety first!\n\nUnlocked by owning Onward."
 "VR_Avatar_MptamHmd"	"Ранній прототип Valve"
 "[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
 "VR_Avatar_MptamHmd_Desc"	"Змонтована на шоломі камера розпізнає розміщені на стінах коди для відстеження позиції носія. Прототипи екранів зроблено із двох стільникових телефонів, з’єднаних за спеціальною схемою."
 "[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
-"VivePromoTitle"	"Предмети HTC Vive"
+"VivePromoTitle"	"Предмети Vive"
 "[english]VivePromoTitle"	"Vive Items"
 "VivePromoDesc"	"Користувачі Vive мають доступ до аватарки шолома Vive і скульптури логотипу Vive.\n\nЇх можна знайти у розділах меню «Аватари» і «Елементи»."
 "[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
+"VR_PhysicsProp_JSCoffeeMug"	"Чашка «Я <3 роботу»"
+"[english]VR_PhysicsProp_JSCoffeeMug"	"I <3 Job Mug"
+"VR_PhysicsProp_JSCoffeeMug_Desc"	"Хоча люди традиційно використовували циліндричні керамічні посудини для поглинання рідин із кофеїном, ці предмети також використовувалися незадоволеними працівниками в якості снарядів, щоби кинути їх у колег та начальників.\n\nРозблоковано завдяки володінню Job Simulator."
+"[english]VR_PhysicsProp_JSCoffeeMug_Desc"	"Although humans traditionally utilized cylindrical ceramic vessels for ingesting caffeinated liquids, these items also acted as projectiles for disgruntled workers to toss at their coworkers and superiors.\n\nUnlocked by owning Job Simulator."
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Серйозний череп"
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Serious Skull"
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Вражайте своїх друзів та лякайте ворогів за допомогою високоякісного клірського черепа, органічно отриманого із клірської навали ніжними руками Сема Стоуна. Тому що ви СЕРЙОЗНО ставитеся до навколишнього середовища.\n\nРозблоковано завдяки володінню Serious Sam VR: The Last Hope."
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Impress your friends and frighten your enemies with this high-quality Kleer skull, organically sourced from the Kleer horde by the tender hands of Sam Stone. Because you are SERIOUS about the environment.\n\nUnlocked by owning Serious Sam VR: The Last Hope."
 }
 }
