--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
@@ -123,26 +123,42 @@
 		"VR_PhysicsProp_PyroVinyl001"			"Pyro Toy"
 		"VR_PhysicsProp_PyroVinyl001_Desc"		"The Pyro Toy from TF2."
 		"VR_PhysicsProp_AudioshieldShield001"			"Audio Shield"
-		"VR_PhysicsProp_AudioshieldShield001_Desc"		"Equip in case of musical bombardment.\n\nUnlocked by owning Audioshield."
+		"VR_PhysicsProp_AudioshieldShield001_Desc"		"Equip in case of musical bombardment.\n\nUnlocked by playing Audioshield."
 		"VR_PhysicsProp_NekoPlushie"					"Neko Toy"
-		"VR_PhysicsProp_NekoPlushie_Desc"				"Meow meow meow meow.\n\nUnlocked by owning Fantastic Contraption."
+		"VR_PhysicsProp_NekoPlushie_Desc"				"Meow meow meow meow.\n\nUnlocked by playing Fantastic Contraption."
 		"VR_PhysicsProp_GauntletTrophy"					"The Gauntlet"
-		"VR_PhysicsProp_GauntletTrophy_Desc"			"Holy smokes, Al, the machine got us both! At least we have this radical souvenir space hand!\n\nUnlocked by owning The Gallery - Call of the Starseed."
+		"VR_PhysicsProp_GauntletTrophy_Desc"			"Holy smokes, Al, the machine got us both! At least we have this radical souvenir space hand!\n\nUnlocked by playing The Gallery - Call of the Starseed."
 		"VR_PhysicsProp_ASAmmoBox"					"Ammo Box"
-		"VR_PhysicsProp_ASAmmoBox_Desc"				"Ammo Box, Yeah baby! Sweet, sweet ammo! \n\nUnlocked by owning Arizona Sunshine."
+		"VR_PhysicsProp_ASAmmoBox_Desc"				"Ammo Box, Yeah baby! Sweet, sweet ammo! \n\nUnlocked by playing Arizona Sunshine."
 		"VR_PhysicsProp_AirmechStrikerToy"				"Beta Striker"
-		"VR_PhysicsProp_AirmechStrikerToy_Desc"			"Second generation Striker class AirMech. This scale model was gifted to government agencies who placed very large orders.\n\nUnlocked by owning AirMech Command."
+		"VR_PhysicsProp_AirmechStrikerToy_Desc"			"Second generation Striker class AirMech. This scale model was gifted to government agencies who placed very large orders.\n\nUnlocked by playing AirMech Command."
 		"VR_PhysicsProp_HJGuntherToy"				"Gunther"
-		"VR_PhysicsProp_HJGuntherToy_Desc"			"Branching out from his diner business, Gunther has entered the world of merchandising. Own your very own Gunther figure today!\n\nUnlocked by owning Hover Junkers."
+		"VR_PhysicsProp_HJGuntherToy_Desc"			"Branching out from his diner business, Gunther has entered the world of merchandising. Own your very own Gunther figure today!\n\nUnlocked by playing Hover Junkers."
 		"VR_PhysicsProp_MiniAtlas"					"Miniature Atlas"
 		"VR_PhysicsProp_MiniAtlas_Desc"				"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories can now suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
 		"VR_PhysicsProp_ViveLogoStatue"					"Vive Sculpture"
 		"VR_PhysicsProp_ViveLogoStatue_Desc"			"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
 		"VR_PhysicsProp_JSCoffeeMug"					"I <3 Job Mug"
-		"VR_PhysicsProp_JSCoffeeMug_Desc"				"Although humans traditionally utilized cylindrical ceramic vessels for ingesting caffeinated liquids, these items also acted as projectiles for disgruntled workers to toss at their coworkers and superiors.\n\nUnlocked by owning Job Simulator."
+		"VR_PhysicsProp_JSCoffeeMug_Desc"				"Although humans traditionally utilized cylindrical ceramic vessels for ingesting caffeinated liquids, these items also acted as projectiles for disgruntled workers to toss at their coworkers and superiors.\n\nUnlocked by playing Job Simulator."
 		"VR_PhysicsProp_SeriousSamKleerHeadTrophy"		"Serious Skull"
-		"VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Impress your friends and frighten your enemies with this high-quality Kleer skull, organically sourced from the Kleer horde by the tender hands of Sam Stone. Because you are SERIOUS about the environment.\n\nUnlocked by owning Serious Sam VR: The Last Hope."
-
+		"VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Impress your friends and frighten your enemies with this high-quality Kleer skull, organically sourced from the Kleer horde by the tender hands of Sam Stone. Because you are SERIOUS about the environment.\n\nUnlocked by playing Serious Sam VR: The Last Hope."
+		"VR_PhysicsProp_CosmicTripFriendbot"		"Friend Bot"
+		"VR_PhysicsProp_CosmicTripFriendbot_Desc"	"Friend bot, friend of everyone. Fresh and funky.\n\nUnlocked by playing Cosmic Trip."
+		"VR_PhysicsProp_AnylandRing"				"Anyland Ring"
+		"VR_PhysicsProp_AnylandRing_Desc"			"In Anyland you can create everything with basic shapes, as those on the Anyland Ring!\n\nUnlocked by playing Anyland."
+		"VR_PhysicsProp_RecRoomBucket"				"Rec Room Bucket"
+		"VR_PhysicsProp_RecRoomBucket_Desc"			"Please do not remove this bucket from the Rec Center. If found, please return promptly!\n\nUnlocked by playing Rec Room."
+		"VR_PhysicsProp_QuivrQuiverWithArrows"		"Ancestral Quiver"
+		"VR_PhysicsProp_QuivrQuiverWithArrows_Desc"	"Found in an ancient ruin, surrounded by the fossilized bones of long-forgotten creatures, this quiver and its arrows still pulse with energy.\n\nUnlocked by playing QuiVr."
+		"VR_PhysicsProp_RomExtractionFigurine"		"ROM: Extraction"
+		"VR_PhysicsProp_RomExtractionFigurine_Desc"	"The enemy is highly intelligent. Please proceed with caution. This message brought to you by ROM CORP.\n\nUnlocked by playing ROM: Extraction."
+		"VR_PhysicsProp_SuperhotVRFigurine"			"SUPERHOT Enemy Figurine"
+		"VR_PhysicsProp_SuperhotVRFigurine_Desc"	"Red crystal figure. Seems angry. Might move if you move.\n\nBODIES ARE DISPOSABLE MIND IS SOFTWARE\n\nUnlocked by playing Superhot VR."
+		"VR_PhysicsProp_FAGeeBeeTrophy"				"Gee Bee Airplane"
+		"VR_PhysicsProp_FAGeeBeeTrophy_Desc"		"The fastest and most dangerous airplane in the world.\n\nUnlocked by playing Final Approach."
+		"VR_PhysicsProp_Island359TRexFigurine"		"T-Rex"
+		"VR_PhysicsProp_Island359TRexFigurine_Desc"	"The biggest and most fearsome dinosaur in Island 359!\n\nUnlocked by playing Island 359."
+		
 		// furniture
 		"VR_Furniture_Book001"						"Book"
 		"VR_Furniture_Book001_Desc"					"A book from the Lazy Panda Publishing Company."
@@ -281,7 +297,7 @@
 		"VR_PropTool_FreezeTool"			"Multi-Tool"
 		"VR_PropTool_FreezeTool_Desc"		"Use this tool to freeze objects in place, thaw objects that are frozen, clone objects or delete them from the world."
 		"VR_PropTool_meeseeks_ball"			"Mr. Meeseeks Ball"
-		"VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
+		"VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by playing Rick and Morty: Virtual Rickality"
 		"VR_PropTool_BoxBot"				"Boxing Bot"
 		"VR_PropTool_BoxBot_Desc"			""
 
@@ -369,14 +385,16 @@
 		"VR_Avatar_teemo_head_Desc"	"Teemo from seadocks."		
 		
 		"VR_Avatar_SpacePirateHelmet"			"Space Pirate Helmet"
-		"VR_Avatar_SpacePirateHelmet_Desc"		"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by owning Space Pirate Trainer."	
+		"VR_Avatar_SpacePirateHelmet_Desc"		"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by playing Space Pirate Trainer."	
 		"VR_Avatar_ViveHeadset"				"HTC Vive Headset"
 		"VR_Avatar_ViveHeadset_Desc"		"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."	
 		"VR_Avatar_OnwardHead"				"MARSOC Helmet"
-		"VR_Avatar_OnwardHead_Desc"			"A ballistic helmet from the tactical multiplayer shooter, Onward. \n\nSafety first!\n\nUnlocked by owning Onward."
+		"VR_Avatar_OnwardHead_Desc"			"A ballistic helmet from the tactical multiplayer shooter, Onward. \n\nSafety first!\n\nUnlocked by playing Onward."
 		"VR_Avatar_MptamHmd"				"Early Valve Prototype"
 		"VR_Avatar_MptamHmd_Desc"			"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
-
+		"VR_Avatar_RawDataSaijaHead"		"Saija Avatar Head"
+		"VR_Avatar_RawDataSaijaHead_Desc"	"As a master of telekinetic Ninjutsu, Saija can deflect bullets, catapult foes into the sky, and rip enemies to pieces with her lethal blades.\n\nUnlocked by playing Raw Data."
+		
 		// avatars hands
 		"VR_Avatar_Hand_Default"		"Vive controllers"
 		"VR_Avatar_Hand_Default_Desc"	"The standard controllers included with the Vive."
@@ -532,6 +550,9 @@
 		"VR_Avatar_Wearable_PinHawaiiChell_Desc"		"A hula-dancing Chell pin."
 		"VR_Avatar_Wearable_PinHawaiiLab"				"Pin - Aperture Science"
 		"VR_Avatar_Wearable_PinHawaiiLab_Desc"			"An Aperture Science themed pin from Hawaii."
+		
+		"VR_Avatar_Wearable_ToTheTopKitsuneMask"		"TO THE TOP Kitsune Mask"
+		"VR_Avatar_Wearable_ToTheTopKitsuneMask_Desc"	"A Kitsune mask that fell off of a high flying Super Bot.\n\nUnlocked by playing TO THE TOP."
 
 		"Quest_Headcrab"						"Headcrab Head Quest"
 		"Quest_Headcrab_Desc"					"Unlock this avatar by interacting with something in the Valve Lobby."
@@ -879,6 +900,7 @@
 		"LobbiesLeaveLobby" "Leave This Room"
 		"LobbiesDescription" "Hosting a Room allows other players to join you in this environment."
 		"LobbiesDescriptionShort" "Open this environment for other players to join."
+		"Beta_Desc"	"You are currently opted into SteamVR Beta: Rooms are only accessible if created by another player opted into SteamVR Beta."
 
 		// Avatar Customization
 		"Customize_Avatar_Title"		"Customize Avatar"
